// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`seeded questions are reproducible > chord-quality on 36–96 1`] = `
[
  "chord-quality:3049564378:60:min7b5 chord-quality:min7b5",
  "chord-quality:1229806541:49:dim7 chord-quality:dim7",
  "chord-quality:4088390650:62:dom7 chord-quality:dom7",
  "chord-quality:437054851:58:dim7 chord-quality:dim7",
  "chord-quality:1625275450:61:min7b5 chord-quality:min7b5",
  "chord-quality:2809356655:62:min7 chord-quality:min7",
  "chord-quality:1349385467:51:dom7 chord-quality:dom7",
  "chord-quality:1322310304:64:min7b5 chord-quality:min7b5",
  "chord-quality:2408301486:62:dim7 chord-quality:dim7",
  "chord-quality:1578858717:50:min7b5 chord-quality:min7b5",
  "chord-quality:4280561179:62:dom7 chord-quality:dom7",
  "chord-quality:1902375489:61:min7b5 chord-quality:min7b5",
  "chord-quality:2887960625:52:maj7 chord-quality:maj7",
  "chord-quality:1771709723:57:dim7 chord-quality:dim7",
  "chord-quality:1331219900:60:min7b5 chord-quality:min7b5",
  "chord-quality:2357852598:63:min7 chord-quality:min7",
  "chord-quality:3604519556:54:maj7 chord-quality:maj7",
  "chord-quality:3328085047:60:min7b5 chord-quality:min7b5",
  "chord-quality:802178832:51:dom7 chord-quality:dom7",
  "chord-quality:1015807178:56:min7b5 chord-quality:min7b5",
  "chord-quality:1478656000:57:dim7 chord-quality:dim7",
  "chord-quality:1407510702:57:min7 chord-quality:min7",
  "chord-quality:224389223:57:dim7 chord-quality:dim7",
  "chord-quality:1252467533:62:dom7 chord-quality:dom7",
  "chord-quality:250199772:62:min7b5 chord-quality:min7b5",
  "chord-quality:1572672275:53:dom7 chord-quality:dom7",
  "chord-quality:2230745728:48:min7 chord-quality:min7",
  "chord-quality:1100955143:52:dim7 chord-quality:dim7",
  "chord-quality:4046152680:56:min7 chord-quality:min7",
  "chord-quality:57008084:58:min7b5 chord-quality:min7b5",
  "chord-quality:3104400155:48:min7 chord-quality:min7",
  "chord-quality:406931602:64:dim7 chord-quality:dim7",
  "chord-quality:3089037264:58:maj7 chord-quality:maj7",
  "chord-quality:3827084074:50:min7 chord-quality:min7",
  "chord-quality:3064412148:59:min7b5 chord-quality:min7b5",
  "chord-quality:2657774992:57:dim7 chord-quality:dim7",
  "chord-quality:892918190:60:maj7 chord-quality:maj7",
  "chord-quality:3637854298:51:min7 chord-quality:min7",
  "chord-quality:3483810387:63:dom7 chord-quality:dom7",
  "chord-quality:621952388:50:min7b5 chord-quality:min7b5",
  "chord-quality:417289699:55:min7 chord-quality:min7",
  "chord-quality:1004915213:64:dom7 chord-quality:dom7",
  "chord-quality:2497763982:64:dim7 chord-quality:dim7",
  "chord-quality:2683813001:58:dom7 chord-quality:dom7",
  "chord-quality:2743841621:49:min7b5 chord-quality:min7b5",
  "chord-quality:2420011518:48:dom7 chord-quality:dom7",
  "chord-quality:3008018372:56:min7 chord-quality:min7",
  "chord-quality:4194675987:62:dom7 chord-quality:dom7",
  "chord-quality:522634105:54:min7b5 chord-quality:min7b5",
  "chord-quality:613992015:49:min7b5 chord-quality:min7b5",
  "digest f52bc95f24ced",
]
`;

exports[`seeded questions are reproducible > chord-quality on 48–72 1`] = `
[
  "chord-quality:3049564378:59:min7b5 chord-quality:min7b5",
  "chord-quality:1229806541:48:dim7 chord-quality:dim7",
  "chord-quality:4088390650:60:dom7 chord-quality:dom7",
  "chord-quality:437054851:57:dim7 chord-quality:dim7",
  "chord-quality:1625275450:59:min7b5 chord-quality:min7b5",
  "chord-quality:2809356655:60:min7 chord-quality:min7",
  "chord-quality:1349385467:51:dom7 chord-quality:dom7",
  "chord-quality:1322310304:62:min7b5 chord-quality:min7b5",
  "chord-quality:2408301486:61:dim7 chord-quality:dim7",
  "chord-quality:1578858717:50:min7b5 chord-quality:min7b5",
  "chord-quality:4280561179:60:dom7 chord-quality:dom7",
  "chord-quality:1902375489:60:min7b5 chord-quality:min7b5",
  "chord-quality:2887960625:51:maj7 chord-quality:maj7",
  "chord-quality:1771709723:57:dim7 chord-quality:dim7",
  "chord-quality:1331219900:59:min7b5 chord-quality:min7b5",
  "chord-quality:2357852598:61:min7 chord-quality:min7",
  "chord-quality:3604519556:53:maj7 chord-quality:maj7",
  "chord-quality:3328085047:59:min7b5 chord-quality:min7b5",
  "chord-quality:802178832:50:dom7 chord-quality:dom7",
  "chord-quality:1015807178:55:min7b5 chord-quality:min7b5",
  "chord-quality:1478656000:56:dim7 chord-quality:dim7",
  "chord-quality:1407510702:56:min7 chord-quality:min7",
  "chord-quality:224389223:57:dim7 chord-quality:dim7",
  "chord-quality:1252467533:60:dom7 chord-quality:dom7",
  "chord-quality:250199772:60:min7b5 chord-quality:min7b5",
  "chord-quality:1572672275:52:dom7 chord-quality:dom7",
  "chord-quality:2230745728:48:min7 chord-quality:min7",
  "chord-quality:1100955143:51:dim7 chord-quality:dim7",
  "chord-quality:4046152680:55:min7 chord-quality:min7",
  "chord-quality:57008084:57:min7b5 chord-quality:min7b5",
  "chord-quality:3104400155:48:min7 chord-quality:min7",
  "chord-quality:406931602:63:dim7 chord-quality:dim7",
  "chord-quality:3089037264:56:maj7 chord-quality:maj7",
  "chord-quality:3827084074:50:min7 chord-quality:min7",
  "chord-quality:3064412148:58:min7b5 chord-quality:min7b5",
  "chord-quality:2657774992:56:dim7 chord-quality:dim7",
  "chord-quality:892918190:58:maj7 chord-quality:maj7",
  "chord-quality:3637854298:51:min7 chord-quality:min7",
  "chord-quality:3483810387:61:dom7 chord-quality:dom7",
  "chord-quality:621952388:50:min7b5 chord-quality:min7b5",
  "chord-quality:417289699:55:min7 chord-quality:min7",
  "chord-quality:1004915213:62:dom7 chord-quality:dom7",
  "chord-quality:2497763982:63:dim7 chord-quality:dim7",
  "chord-quality:2683813001:57:dom7 chord-quality:dom7",
  "chord-quality:2743841621:49:min7b5 chord-quality:min7b5",
  "chord-quality:2420011518:48:dom7 chord-quality:dom7",
  "chord-quality:3008018372:55:min7 chord-quality:min7",
  "chord-quality:4194675987:60:dom7 chord-quality:dom7",
  "chord-quality:522634105:53:min7b5 chord-quality:min7b5",
  "chord-quality:613992015:48:min7b5 chord-quality:min7b5",
  "digest 11191bab7e4c26",
]
`;

exports[`seeded questions are reproducible > chord-quality on 60–72 1`] = `
[
  "chord-quality:3049564378:62:min7b5 chord-quality:min7b5",
  "chord-quality:1229806541:60:dim7 chord-quality:dim7",
  "chord-quality:4088390650:62:dom7 chord-quality:dom7",
  "chord-quality:437054851:62:dim7 chord-quality:dim7",
  "chord-quality:1625275450:62:min7b5 chord-quality:min7b5",
  "chord-quality:2809356655:62:min7 chord-quality:min7",
  "chord-quality:1349385467:60:dom7 chord-quality:dom7",
  "chord-quality:1322310304:62:min7b5 chord-quality:min7b5",
  "chord-quality:2408301486:63:dim7 chord-quality:dim7",
  "chord-quality:1578858717:60:min7b5 chord-quality:min7b5",
  "chord-quality:4280561179:62:dom7 chord-quality:dom7",
  "chord-quality:1902375489:62:min7b5 chord-quality:min7b5",
  "chord-quality:2887960625:60:maj7 chord-quality:maj7",
  "chord-quality:1771709723:62:dim7 chord-quality:dim7",
  "chord-quality:1331219900:62:min7b5 chord-quality:min7b5",
  "chord-quality:2357852598:62:min7 chord-quality:min7",
  "chord-quality:3604519556:60:maj7 chord-quality:maj7",
  "chord-quality:3328085047:62:min7b5 chord-quality:min7b5",
  "chord-quality:802178832:60:dom7 chord-quality:dom7",
  "chord-quality:1015807178:61:min7b5 chord-quality:min7b5",
  "chord-quality:1478656000:62:dim7 chord-quality:dim7",
  "chord-quality:1407510702:61:min7 chord-quality:min7",
  "chord-quality:224389223:62:dim7 chord-quality:dim7",
  "chord-quality:1252467533:62:dom7 chord-quality:dom7",
  "chord-quality:250199772:62:min7b5 chord-quality:min7b5",
  "chord-quality:1572672275:60:dom7 chord-quality:dom7",
  "chord-quality:2230745728:60:min7 chord-quality:min7",
  "chord-quality:1100955143:60:dim7 chord-quality:dim7",
  "chord-quality:4046152680:61:min7 chord-quality:min7",
  "chord-quality:57008084:61:min7b5 chord-quality:min7b5",
  "chord-quality:3104400155:60:min7 chord-quality:min7",
  "chord-quality:406931602:63:dim7 chord-quality:dim7",
  "chord-quality:3089037264:61:maj7 chord-quality:maj7",
  "chord-quality:3827084074:60:min7 chord-quality:min7",
  "chord-quality:3064412148:62:min7b5 chord-quality:min7b5",
  "chord-quality:2657774992:62:dim7 chord-quality:dim7",
  "chord-quality:892918190:61:maj7 chord-quality:maj7",
  "chord-quality:3637854298:60:min7 chord-quality:min7",
  "chord-quality:3483810387:62:dom7 chord-quality:dom7",
  "chord-quality:621952388:60:min7b5 chord-quality:min7b5",
  "chord-quality:417289699:61:min7 chord-quality:min7",
  "chord-quality:1004915213:62:dom7 chord-quality:dom7",
  "chord-quality:2497763982:63:dim7 chord-quality:dim7",
  "chord-quality:2683813001:61:dom7 chord-quality:dom7",
  "chord-quality:2743841621:60:min7b5 chord-quality:min7b5",
  "chord-quality:2420011518:60:dom7 chord-quality:dom7",
  "chord-quality:3008018372:61:min7 chord-quality:min7",
  "chord-quality:4194675987:62:dom7 chord-quality:dom7",
  "chord-quality:522634105:61:min7b5 chord-quality:min7b5",
  "chord-quality:613992015:60:min7b5 chord-quality:min7b5",
  "digest 1098d861ea07bb",
]
`;

exports[`seeded questions are reproducible > chord-quality on 60–79 1`] = `
[
  "chord-quality:3049564378:63:min7b5 chord-quality:min7b5",
  "chord-quality:1229806541:60:dim7 chord-quality:dim7",
  "chord-quality:4088390650:64:dom7 chord-quality:dom7",
  "chord-quality:437054851:63:dim7 chord-quality:dim7",
  "chord-quality:1625275450:63:min7b5 chord-quality:min7b5",
  "chord-quality:2809356655:64:min7 chord-quality:min7",
  "chord-quality:1349385467:61:dom7 chord-quality:dom7",
  "chord-quality:1322310304:64:min7b5 chord-quality:min7b5",
  "chord-quality:2408301486:64:dim7 chord-quality:dim7",
  "chord-quality:1578858717:60:min7b5 chord-quality:min7b5",
  "chord-quality:4280561179:64:dom7 chord-quality:dom7",
  "chord-quality:1902375489:64:min7b5 chord-quality:min7b5",
  "chord-quality:2887960625:61:maj7 chord-quality:maj7",
  "chord-quality:1771709723:62:dim7 chord-quality:dim7",
  "chord-quality:1331219900:63:min7b5 chord-quality:min7b5",
  "chord-quality:2357852598:64:min7 chord-quality:min7",
  "chord-quality:3604519556:61:maj7 chord-quality:maj7",
  "chord-quality:3328085047:63:min7b5 chord-quality:min7b5",
  "chord-quality:802178832:60:dom7 chord-quality:dom7",
  "chord-quality:1015807178:62:min7b5 chord-quality:min7b5",
  "chord-quality:1478656000:62:dim7 chord-quality:dim7",
  "chord-quality:1407510702:62:min7 chord-quality:min7",
  "chord-quality:224389223:62:dim7 chord-quality:dim7",
  "chord-quality:1252467533:64:dom7 chord-quality:dom7",
  "chord-quality:250199772:64:min7b5 chord-quality:min7b5",
  "chord-quality:1572672275:61:dom7 chord-quality:dom7",
  "chord-quality:2230745728:60:min7 chord-quality:min7",
  "chord-quality:1100955143:61:dim7 chord-quality:dim7",
  "chord-quality:4046152680:62:min7 chord-quality:min7",
  "chord-quality:57008084:63:min7b5 chord-quality:min7b5",
  "chord-quality:3104400155:60:min7 chord-quality:min7",
  "chord-quality:406931602:64:dim7 chord-quality:dim7",
  "chord-quality:3089037264:63:maj7 chord-quality:maj7",
  "chord-quality:3827084074:60:min7 chord-quality:min7",
  "chord-quality:3064412148:63:min7b5 chord-quality:min7b5",
  "chord-quality:2657774992:62:dim7 chord-quality:dim7",
  "chord-quality:892918190:63:maj7 chord-quality:maj7",
  "chord-quality:3637854298:61:min7 chord-quality:min7",
  "chord-quality:3483810387:64:dom7 chord-quality:dom7",
  "chord-quality:621952388:60:min7b5 chord-quality:min7b5",
  "chord-quality:417289699:62:min7 chord-quality:min7",
  "chord-quality:1004915213:64:dom7 chord-quality:dom7",
  "chord-quality:2497763982:64:dim7 chord-quality:dim7",
  "chord-quality:2683813001:63:dom7 chord-quality:dom7",
  "chord-quality:2743841621:60:min7b5 chord-quality:min7b5",
  "chord-quality:2420011518:60:dom7 chord-quality:dom7",
  "chord-quality:3008018372:62:min7 chord-quality:min7",
  "chord-quality:4194675987:64:dom7 chord-quality:dom7",
  "chord-quality:522634105:61:min7b5 chord-quality:min7b5",
  "chord-quality:613992015:60:min7b5 chord-quality:min7b5",
  "digest 1cf222096b986",
]
`;

exports[`seeded questions are reproducible > find-the-note on 36–96 1`] = `
[
  "find-the-note:3049564378:77 find-the-note:pc:5",
  "find-the-note:1229806541:91 find-the-note:pc:7",
  "find-the-note:4088390650:90 find-the-note:pc:6",
  "find-the-note:437054851:89 find-the-note:pc:5",
  "find-the-note:1625275450:76 find-the-note:pc:4",
  "find-the-note:2809356655:86 find-the-note:pc:2",
  "find-the-note:1349385467:48 find-the-note:pc:0",
  "find-the-note:1322310304:94 find-the-note:pc:10",
  "find-the-note:2408301486:90 find-the-note:pc:6",
  "find-the-note:1578858717:39 find-the-note:pc:3",
  "find-the-note:4280561179:51 find-the-note:pc:3",
  "find-the-note:1902375489:82 find-the-note:pc:10",
  "find-the-note:2887960625:78 find-the-note:pc:6",
  "find-the-note:1771709723:41 find-the-note:pc:5",
  "find-the-note:1331219900:74 find-the-note:pc:2",
  "find-the-note:2357852598:65 find-the-note:pc:5",
  "find-the-note:3604519556:47 find-the-note:pc:11",
  "find-the-note:3328085047:73 find-the-note:pc:1",
  "find-the-note:802178832:78 find-the-note:pc:6",
  "find-the-note:1015807178:61 find-the-note:pc:1",
  "find-the-note:1478656000:93 find-the-note:pc:9",
  "find-the-note:1407510702:63 find-the-note:pc:3",
  "find-the-note:224389223:66 find-the-note:pc:6",
  "find-the-note:1252467533:57 find-the-note:pc:9",
  "find-the-note:250199772:84 find-the-note:pc:0",
  "find-the-note:1572672275:51 find-the-note:pc:3",
  "find-the-note:2230745728:61 find-the-note:pc:1",
  "find-the-note:1100955143:88 find-the-note:pc:4",
  "find-the-note:4046152680:62 find-the-note:pc:2",
  "find-the-note:57008084:83 find-the-note:pc:11",
  "find-the-note:3104400155:37 find-the-note:pc:1",
  "find-the-note:406931602:91 find-the-note:pc:7",
  "find-the-note:3089037264:39 find-the-note:pc:3",
  "find-the-note:3827084074:70 find-the-note:pc:10",
  "find-the-note:3064412148:82 find-the-note:pc:10",
  "find-the-note:2657774992:72 find-the-note:pc:0",
  "find-the-note:892918190:91 find-the-note:pc:7",
  "find-the-note:3637854298:68 find-the-note:pc:8",
  "find-the-note:3483810387:57 find-the-note:pc:9",
  "find-the-note:621952388:45 find-the-note:pc:9",
  "find-the-note:417289699:60 find-the-note:pc:0",
  "find-the-note:1004915213:56 find-the-note:pc:8",
  "find-the-note:2497763982:95 find-the-note:pc:11",
  "find-the-note:2683813001:51 find-the-note:pc:3",
  "find-the-note:2743841621:44 find-the-note:pc:8",
  "find-the-note:2420011518:77 find-the-note:pc:5",
  "find-the-note:3008018372:67 find-the-note:pc:7",
  "find-the-note:4194675987:52 find-the-note:pc:4",
  "find-the-note:522634105:73 find-the-note:pc:1",
  "find-the-note:613992015:43 find-the-note:pc:7",
  "digest 12ca8b69d14af0",
]
`;

exports[`seeded questions are reproducible > find-the-note on 48–72 1`] = `
[
  "find-the-note:3049564378:64 find-the-note:pc:4",
  "find-the-note:1229806541:70 find-the-note:pc:10",
  "find-the-note:4088390650:55 find-the-note:pc:7",
  "find-the-note:437054851:69 find-the-note:pc:9",
  "find-the-note:1625275450:64 find-the-note:pc:4",
  "find-the-note:2809356655:59 find-the-note:pc:11",
  "find-the-note:1349385467:53 find-the-note:pc:5",
  "find-the-note:1322310304:63 find-the-note:pc:3",
  "find-the-note:2408301486:70 find-the-note:pc:10",
  "find-the-note:1578858717:51 find-the-note:pc:3",
  "find-the-note:4280561179:51 find-the-note:pc:3",
  "find-the-note:1902375489:67 find-the-note:pc:7",
  "find-the-note:2887960625:65 find-the-note:pc:5",
  "find-the-note:1771709723:50 find-the-note:pc:2",
  "find-the-note:1331219900:62 find-the-note:pc:2",
  "find-the-note:2357852598:60 find-the-note:pc:0",
  "find-the-note:3604519556:52 find-the-note:pc:4",
  "find-the-note:3328085047:63 find-the-note:pc:3",
  "find-the-note:802178832:65 find-the-note:pc:5",
  "find-the-note:1015807178:61 find-the-note:pc:1",
  "find-the-note:1478656000:71 find-the-note:pc:11",
  "find-the-note:1407510702:63 find-the-note:pc:3",
  "find-the-note:224389223:60 find-the-note:pc:0",
  "find-the-note:1252467533:56 find-the-note:pc:8",
  "find-the-note:250199772:72 find-the-note:pc:0",
  "find-the-note:1572672275:54 find-the-note:pc:6",
  "find-the-note:2230745728:58 find-the-note:pc:10",
  "find-the-note:1100955143:69 find-the-note:pc:9",
  "find-the-note:4046152680:58 find-the-note:pc:10",
  "find-the-note:57008084:71 find-the-note:pc:11",
  "find-the-note:3104400155:62 find-the-note:pc:2",
  "find-the-note:406931602:70 find-the-note:pc:10",
  "find-the-note:3089037264:51 find-the-note:pc:3",
  "find-the-note:3827084074:62 find-the-note:pc:2",
  "find-the-note:3064412148:70 find-the-note:pc:10",
  "find-the-note:2657774992:63 find-the-note:pc:3",
  "find-the-note:892918190:70 find-the-note:pc:10",
  "find-the-note:3637854298:61 find-the-note:pc:1",
  "find-the-note:3483810387:56 find-the-note:pc:8",
  "find-the-note:621952388:57 find-the-note:pc:9",
  "find-the-note:417289699:58 find-the-note:pc:10",
  "find-the-note:1004915213:56 find-the-note:pc:8",
  "find-the-note:2497763982:72 find-the-note:pc:0",
  "find-the-note:2683813001:51 find-the-note:pc:3",
  "find-the-note:2743841621:56 find-the-note:pc:8",
  "find-the-note:2420011518:64 find-the-note:pc:4",
  "find-the-note:3008018372:61 find-the-note:pc:1",
  "find-the-note:4194675987:54 find-the-note:pc:6",
  "find-the-note:522634105:63 find-the-note:pc:3",
  "find-the-note:613992015:55 find-the-note:pc:7",
  "digest 1040aeffa2fb94",
]
`;

exports[`seeded questions are reproducible > find-the-note on 60–72 1`] = `
[
  "find-the-note:3049564378:68 find-the-note:pc:8",
  "find-the-note:1229806541:71 find-the-note:pc:11",
  "find-the-note:4088390650:63 find-the-note:pc:3",
  "find-the-note:437054851:71 find-the-note:pc:11",
  "find-the-note:1625275450:64 find-the-note:pc:4",
  "find-the-note:2809356655:66 find-the-note:pc:6",
  "find-the-note:1349385467:62 find-the-note:pc:2",
  "find-the-note:1322310304:67 find-the-note:pc:7",
  "find-the-note:2408301486:71 find-the-note:pc:11",
  "find-the-note:1578858717:63 find-the-note:pc:3",
  "find-the-note:4280561179:63 find-the-note:pc:3",
  "find-the-note:1902375489:69 find-the-note:pc:9",
  "find-the-note:2887960625:61 find-the-note:pc:1",
  "find-the-note:1771709723:71 find-the-note:pc:11",
  "find-the-note:1331219900:62 find-the-note:pc:2",
  "find-the-note:2357852598:66 find-the-note:pc:6",
  "find-the-note:3604519556:62 find-the-note:pc:2",
  "find-the-note:3328085047:67 find-the-note:pc:7",
  "find-the-note:802178832:69 find-the-note:pc:9",
  "find-the-note:1015807178:61 find-the-note:pc:1",
  "find-the-note:1478656000:72 find-the-note:pc:0",
  "find-the-note:1407510702:63 find-the-note:pc:3",
  "find-the-note:224389223:66 find-the-note:pc:6",
  "find-the-note:1252467533:64 find-the-note:pc:4",
  "find-the-note:250199772:72 find-the-note:pc:0",
  "find-the-note:1572672275:63 find-the-note:pc:3",
  "find-the-note:2230745728:65 find-the-note:pc:5",
  "find-the-note:1100955143:71 find-the-note:pc:11",
  "find-the-note:4046152680:65 find-the-note:pc:5",
  "find-the-note:57008084:71 find-the-note:pc:11",
  "find-the-note:3104400155:67 find-the-note:pc:7",
  "find-the-note:406931602:71 find-the-note:pc:11",
  "find-the-note:3089037264:63 find-the-note:pc:3",
  "find-the-note:3827084074:67 find-the-note:pc:7",
  "find-the-note:3064412148:70 find-the-note:pc:10",
  "find-the-note:2657774992:67 find-the-note:pc:7",
  "find-the-note:892918190:71 find-the-note:pc:11",
  "find-the-note:3637854298:67 find-the-note:pc:7",
  "find-the-note:3483810387:64 find-the-note:pc:4",
  "find-the-note:621952388:69 find-the-note:pc:9",
  "find-the-note:417289699:65 find-the-note:pc:5",
  "find-the-note:1004915213:64 find-the-note:pc:4",
  "find-the-note:2497763982:72 find-the-note:pc:0",
  "find-the-note:2683813001:63 find-the-note:pc:3",
  "find-the-note:2743841621:68 find-the-note:pc:8",
  "find-the-note:2420011518:69 find-the-note:pc:9",
  "find-the-note:3008018372:66 find-the-note:pc:6",
  "find-the-note:4194675987:63 find-the-note:pc:3",
  "find-the-note:522634105:67 find-the-note:pc:7",
  "find-the-note:613992015:67 find-the-note:pc:7",
  "digest 3a94ef49590d2",
]
`;

exports[`seeded questions are reproducible > find-the-note on 60–79 1`] = `
[
  "find-the-note:3049564378:73 find-the-note:pc:1",
  "find-the-note:1229806541:78 find-the-note:pc:6",
  "find-the-note:4088390650:77 find-the-note:pc:5",
  "find-the-note:437054851:72 find-the-note:pc:0",
  "find-the-note:1625275450:76 find-the-note:pc:4",
  "find-the-note:2809356655:69 find-the-note:pc:9",
  "find-the-note:1349385467:64 find-the-note:pc:4",
  "find-the-note:1322310304:72 find-the-note:pc:0",
  "find-the-note:2408301486:77 find-the-note:pc:5",
  "find-the-note:1578858717:63 find-the-note:pc:3",
  "find-the-note:4280561179:63 find-the-note:pc:3",
  "find-the-note:1902375489:76 find-the-note:pc:4",
  "find-the-note:2887960625:74 find-the-note:pc:2",
  "find-the-note:1771709723:61 find-the-note:pc:1",
  "find-the-note:1331219900:74 find-the-note:pc:2",
  "find-the-note:2357852598:69 find-the-note:pc:9",
  "find-the-note:3604519556:63 find-the-note:pc:3",
  "find-the-note:3328085047:72 find-the-note:pc:0",
  "find-the-note:802178832:73 find-the-note:pc:1",
  "find-the-note:1015807178:73 find-the-note:pc:1",
  "find-the-note:1478656000:78 find-the-note:pc:6",
  "find-the-note:1407510702:75 find-the-note:pc:3",
  "find-the-note:224389223:70 find-the-note:pc:10",
  "find-the-note:1252467533:67 find-the-note:pc:7",
  "find-the-note:250199772:72 find-the-note:pc:0",
  "find-the-note:1572672275:65 find-the-note:pc:5",
  "find-the-note:2230745728:68 find-the-note:pc:8",
  "find-the-note:1100955143:77 find-the-note:pc:5",
  "find-the-note:4046152680:68 find-the-note:pc:8",
  "find-the-note:57008084:71 find-the-note:pc:11",
  "find-the-note:3104400155:60 find-the-note:pc:0",
  "find-the-note:406931602:78 find-the-note:pc:6",
  "find-the-note:3089037264:63 find-the-note:pc:3",
  "find-the-note:3827084074:71 find-the-note:pc:11",
  "find-the-note:3064412148:70 find-the-note:pc:10",
  "find-the-note:2657774992:72 find-the-note:pc:0",
  "find-the-note:892918190:78 find-the-note:pc:6",
  "find-the-note:3637854298:70 find-the-note:pc:10",
  "find-the-note:3483810387:66 find-the-note:pc:6",
  "find-the-note:621952388:69 find-the-note:pc:9",
  "find-the-note:417289699:68 find-the-note:pc:8",
  "find-the-note:1004915213:66 find-the-note:pc:6",
  "find-the-note:2497763982:79 find-the-note:pc:7",
  "find-the-note:2683813001:63 find-the-note:pc:3",
  "find-the-note:2743841621:68 find-the-note:pc:8",
  "find-the-note:2420011518:73 find-the-note:pc:1",
  "find-the-note:3008018372:70 find-the-note:pc:10",
  "find-the-note:4194675987:65 find-the-note:pc:5",
  "find-the-note:522634105:72 find-the-note:pc:0",
  "find-the-note:613992015:67 find-the-note:pc:7",
  "digest 51cb41142988a",
]
`;

exports[`seeded questions are reproducible > guide-tones on 36–96 1`] = `
[
  "guide-tones:3049564378:57:min7 guide-tones:min7:9",
  "guide-tones:1229806541:60:min7 guide-tones:min7:0",
  "guide-tones:4088390650:51:min7 guide-tones:min7:3",
  "guide-tones:437054851:55:min7 guide-tones:min7:7",
  "guide-tones:1625275450:52:min7 guide-tones:min7:4",
  "guide-tones:2809356655:57:dom7 guide-tones:dom7:9",
  "guide-tones:1349385467:50:maj7 guide-tones:maj7:2",
  "guide-tones:1322310304:59:dom7 guide-tones:dom7:11",
  "guide-tones:2408301486:58:min7 guide-tones:min7:10",
  "guide-tones:1578858717:51:min7 guide-tones:min7:3",
  "guide-tones:4280561179:58:maj7 guide-tones:maj7:10",
  "guide-tones:1902375489:57:min7 guide-tones:min7:9",
  "guide-tones:2887960625:49:min7 guide-tones:min7:1",
  "guide-tones:1771709723:58:maj7 guide-tones:maj7:10",
  "guide-tones:1331219900:62:min7 guide-tones:min7:2",
  "guide-tones:2357852598:59:dom7 guide-tones:dom7:11",
  "guide-tones:3604519556:52:maj7 guide-tones:maj7:4",
  "guide-tones:3328085047:56:dom7 guide-tones:dom7:8",
  "guide-tones:802178832:52:min7 guide-tones:min7:4",
  "guide-tones:1015807178:61:min7 guide-tones:min7:1",
  "guide-tones:1478656000:54:min7 guide-tones:min7:6",
  "guide-tones:1407510702:54:dom7 guide-tones:dom7:6",
  "guide-tones:224389223:58:dom7 guide-tones:dom7:10",
  "guide-tones:1252467533:58:maj7 guide-tones:maj7:10",
  "guide-tones:250199772:60:min7 guide-tones:min7:0",
  "guide-tones:1572672275:51:maj7 guide-tones:maj7:3",
  "guide-tones:2230745728:48:dom7 guide-tones:dom7:0",
  "guide-tones:1100955143:62:min7 guide-tones:min7:2",
  "guide-tones:4046152680:53:dom7 guide-tones:dom7:5",
  "guide-tones:57008084:59:dom7 guide-tones:dom7:11",
  "guide-tones:3104400155:60:dom7 guide-tones:dom7:0",
  "guide-tones:406931602:59:min7 guide-tones:min7:11",
  "guide-tones:3089037264:55:maj7 guide-tones:maj7:7",
  "guide-tones:3827084074:61:dom7 guide-tones:dom7:1",
  "guide-tones:3064412148:58:dom7 guide-tones:dom7:10",
  "guide-tones:2657774992:49:dom7 guide-tones:dom7:1",
  "guide-tones:892918190:59:min7 guide-tones:min7:11",
  "guide-tones:3637854298:62:dom7 guide-tones:dom7:2",
  "guide-tones:3483810387:59:dom7 guide-tones:dom7:11",
  "guide-tones:621952388:57:dom7 guide-tones:dom7:9",
  "guide-tones:417289699:53:dom7 guide-tones:dom7:5",
  "guide-tones:1004915213:59:dom7 guide-tones:dom7:11",
  "guide-tones:2497763982:59:min7 guide-tones:min7:11",
  "guide-tones:2683813001:55:maj7 guide-tones:maj7:7",
  "guide-tones:2743841621:56:dom7 guide-tones:dom7:8",
  "guide-tones:2420011518:56:min7 guide-tones:min7:8",
  "guide-tones:3008018372:53:dom7 guide-tones:dom7:5",
  "guide-tones:4194675987:58:maj7 guide-tones:maj7:10",
  "guide-tones:522634105:52:dom7 guide-tones:dom7:4",
  "guide-tones:613992015:55:dom7 guide-tones:dom7:7",
  "digest 1b9c7654ddeaa9",
]
`;

exports[`seeded questions are reproducible > guide-tones on 48–72 1`] = `
[
  "guide-tones:3049564378:57:min7 guide-tones:min7:9",
  "guide-tones:1229806541:60:min7 guide-tones:min7:0",
  "guide-tones:4088390650:51:min7 guide-tones:min7:3",
  "guide-tones:437054851:55:min7 guide-tones:min7:7",
  "guide-tones:1625275450:52:min7 guide-tones:min7:4",
  "guide-tones:2809356655:57:dom7 guide-tones:dom7:9",
  "guide-tones:1349385467:50:maj7 guide-tones:maj7:2",
  "guide-tones:1322310304:59:dom7 guide-tones:dom7:11",
  "guide-tones:2408301486:58:min7 guide-tones:min7:10",
  "guide-tones:1578858717:51:min7 guide-tones:min7:3",
  "guide-tones:4280561179:58:maj7 guide-tones:maj7:10",
  "guide-tones:1902375489:57:min7 guide-tones:min7:9",
  "guide-tones:2887960625:49:min7 guide-tones:min7:1",
  "guide-tones:1771709723:58:maj7 guide-tones:maj7:10",
  "guide-tones:1331219900:62:min7 guide-tones:min7:2",
  "guide-tones:2357852598:59:dom7 guide-tones:dom7:11",
  "guide-tones:3604519556:52:maj7 guide-tones:maj7:4",
  "guide-tones:3328085047:56:dom7 guide-tones:dom7:8",
  "guide-tones:802178832:52:min7 guide-tones:min7:4",
  "guide-tones:1015807178:61:min7 guide-tones:min7:1",
  "guide-tones:1478656000:54:min7 guide-tones:min7:6",
  "guide-tones:1407510702:54:dom7 guide-tones:dom7:6",
  "guide-tones:224389223:58:dom7 guide-tones:dom7:10",
  "guide-tones:1252467533:58:maj7 guide-tones:maj7:10",
  "guide-tones:250199772:60:min7 guide-tones:min7:0",
  "guide-tones:1572672275:51:maj7 guide-tones:maj7:3",
  "guide-tones:2230745728:48:dom7 guide-tones:dom7:0",
  "guide-tones:1100955143:62:min7 guide-tones:min7:2",
  "guide-tones:4046152680:53:dom7 guide-tones:dom7:5",
  "guide-tones:57008084:59:dom7 guide-tones:dom7:11",
  "guide-tones:3104400155:60:dom7 guide-tones:dom7:0",
  "guide-tones:406931602:59:min7 guide-tones:min7:11",
  "guide-tones:3089037264:55:maj7 guide-tones:maj7:7",
  "guide-tones:3827084074:61:dom7 guide-tones:dom7:1",
  "guide-tones:3064412148:58:dom7 guide-tones:dom7:10",
  "guide-tones:2657774992:49:dom7 guide-tones:dom7:1",
  "guide-tones:892918190:59:min7 guide-tones:min7:11",
  "guide-tones:3637854298:62:dom7 guide-tones:dom7:2",
  "guide-tones:3483810387:59:dom7 guide-tones:dom7:11",
  "guide-tones:621952388:57:dom7 guide-tones:dom7:9",
  "guide-tones:417289699:53:dom7 guide-tones:dom7:5",
  "guide-tones:1004915213:59:dom7 guide-tones:dom7:11",
  "guide-tones:2497763982:59:min7 guide-tones:min7:11",
  "guide-tones:2683813001:55:maj7 guide-tones:maj7:7",
  "guide-tones:2743841621:56:dom7 guide-tones:dom7:8",
  "guide-tones:2420011518:56:min7 guide-tones:min7:8",
  "guide-tones:3008018372:53:dom7 guide-tones:dom7:5",
  "guide-tones:4194675987:58:maj7 guide-tones:maj7:10",
  "guide-tones:522634105:52:dom7 guide-tones:dom7:4",
  "guide-tones:613992015:55:dom7 guide-tones:dom7:7",
  "digest 1b9c7654ddeaa9",
]
`;

exports[`seeded questions are reproducible > guide-tones on 60–72 1`] = `
[
  "guide-tones:3049564378:62:min7 guide-tones:min7:2",
  "guide-tones:1229806541:60:min7 guide-tones:min7:0",
  "guide-tones:4088390650:61:min7 guide-tones:min7:1",
  "guide-tones:437054851:62:dom7 guide-tones:dom7:2",
  "guide-tones:1625275450:62:dom7 guide-tones:dom7:2",
  "guide-tones:2809356655:61:maj7 guide-tones:maj7:1",
  "guide-tones:1349385467:60:maj7 guide-tones:maj7:0",
  "guide-tones:1322310304:62:dom7 guide-tones:dom7:2",
  "guide-tones:2408301486:62:min7 guide-tones:min7:2",
  "guide-tones:1578858717:62:min7 guide-tones:min7:2",
  "guide-tones:4280561179:61:maj7 guide-tones:maj7:1",
  "guide-tones:1902375489:62:min7 guide-tones:min7:2",
  "guide-tones:2887960625:60:min7 guide-tones:min7:0",
  "guide-tones:1771709723:61:maj7 guide-tones:maj7:1",
  "guide-tones:1331219900:60:dom7 guide-tones:dom7:0",
  "guide-tones:2357852598:62:dom7 guide-tones:dom7:2",
  "guide-tones:3604519556:60:maj7 guide-tones:maj7:0",
  "guide-tones:3328085047:62:dom7 guide-tones:dom7:2",
  "guide-tones:802178832:61:min7 guide-tones:min7:1",
  "guide-tones:1015807178:60:min7 guide-tones:min7:0",
  "guide-tones:1478656000:61:min7 guide-tones:min7:1",
  "guide-tones:1407510702:61:dom7 guide-tones:dom7:1",
  "guide-tones:224389223:62:dom7 guide-tones:dom7:2",
  "guide-tones:1252467533:61:maj7 guide-tones:maj7:1",
  "guide-tones:250199772:60:maj7 guide-tones:maj7:0",
  "guide-tones:1572672275:60:min7 guide-tones:min7:0",
  "guide-tones:2230745728:60:dom7 guide-tones:dom7:0",
  "guide-tones:1100955143:60:min7 guide-tones:min7:0",
  "guide-tones:4046152680:61:dom7 guide-tones:dom7:1",
  "guide-tones:57008084:61:dom7 guide-tones:dom7:1",
  "guide-tones:3104400155:60:dom7 guide-tones:dom7:0",
  "guide-tones:406931602:62:min7 guide-tones:min7:2",
  "guide-tones:3089037264:61:maj7 guide-tones:maj7:1",
  "guide-tones:3827084074:60:dom7 guide-tones:dom7:0",
  "guide-tones:3064412148:61:min7 guide-tones:min7:1",
  "guide-tones:2657774992:62:dom7 guide-tones:dom7:2",
  "guide-tones:892918190:62:min7 guide-tones:min7:2",
  "guide-tones:3637854298:60:dom7 guide-tones:dom7:0",
  "guide-tones:3483810387:62:dom7 guide-tones:dom7:2",
  "guide-tones:621952388:61:maj7 guide-tones:maj7:1",
  "guide-tones:417289699:61:dom7 guide-tones:dom7:1",
  "guide-tones:1004915213:62:dom7 guide-tones:dom7:2",
  "guide-tones:2497763982:62:min7 guide-tones:min7:2",
  "guide-tones:2683813001:61:maj7 guide-tones:maj7:1",
  "guide-tones:2743841621:62:dom7 guide-tones:dom7:2",
  "guide-tones:2420011518:62:min7 guide-tones:min7:2",
  "guide-tones:3008018372:61:dom7 guide-tones:dom7:1",
  "guide-tones:4194675987:61:maj7 guide-tones:maj7:1",
  "guide-tones:522634105:61:dom7 guide-tones:dom7:1",
  "guide-tones:613992015:62:min7 guide-tones:min7:2",
  "digest 1b3ecca9033bc0",
]
`;

exports[`seeded questions are reproducible > guide-tones on 60–79 1`] = `
[
  "guide-tones:3049564378:67:min7 guide-tones:min7:7",
  "guide-tones:1229806541:60:min7 guide-tones:min7:0",
  "guide-tones:4088390650:62:min7 guide-tones:min7:2",
  "guide-tones:437054851:66:min7 guide-tones:min7:6",
  "guide-tones:1625275450:69:min7 guide-tones:min7:9",
  "guide-tones:2809356655:68:dom7 guide-tones:dom7:8",
  "guide-tones:1349385467:61:maj7 guide-tones:maj7:1",
  "guide-tones:1322310304:69:dom7 guide-tones:dom7:9",
  "guide-tones:2408301486:68:min7 guide-tones:min7:8",
  "guide-tones:1578858717:65:maj7 guide-tones:maj7:5",
  "guide-tones:4280561179:67:maj7 guide-tones:maj7:7",
  "guide-tones:1902375489:68:min7 guide-tones:min7:8",
  "guide-tones:2887960625:61:min7 guide-tones:min7:1",
  "guide-tones:1771709723:67:maj7 guide-tones:maj7:7",
  "guide-tones:1331219900:62:dom7 guide-tones:dom7:2",
  "guide-tones:2357852598:69:dom7 guide-tones:dom7:9",
  "guide-tones:3604519556:63:maj7 guide-tones:maj7:3",
  "guide-tones:3328085047:67:dom7 guide-tones:dom7:7",
  "guide-tones:802178832:63:min7 guide-tones:min7:3",
  "guide-tones:1015807178:68:dom7 guide-tones:dom7:8",
  "guide-tones:1478656000:65:min7 guide-tones:min7:5",
  "guide-tones:1407510702:65:dom7 guide-tones:dom7:5",
  "guide-tones:224389223:68:dom7 guide-tones:dom7:8",
  "guide-tones:1252467533:68:maj7 guide-tones:maj7:8",
  "guide-tones:250199772:64:min7 guide-tones:min7:4",
  "guide-tones:1572672275:62:maj7 guide-tones:maj7:2",
  "guide-tones:2230745728:60:dom7 guide-tones:dom7:0",
  "guide-tones:1100955143:62:min7 guide-tones:min7:2",
  "guide-tones:4046152680:64:dom7 guide-tones:dom7:4",
  "guide-tones:57008084:60:maj7 guide-tones:maj7:0",
  "guide-tones:3104400155:60:dom7 guide-tones:dom7:0",
  "guide-tones:406931602:69:min7 guide-tones:min7:9",
  "guide-tones:3089037264:65:maj7 guide-tones:maj7:5",
  "guide-tones:3827084074:61:dom7 guide-tones:dom7:1",
  "guide-tones:3064412148:66:maj7 guide-tones:maj7:6",
  "guide-tones:2657774992:68:dom7 guide-tones:dom7:8",
  "guide-tones:892918190:69:min7 guide-tones:min7:9",
  "guide-tones:3637854298:62:dom7 guide-tones:dom7:2",
  "guide-tones:3483810387:69:dom7 guide-tones:dom7:9",
  "guide-tones:621952388:63:dom7 guide-tones:dom7:3",
  "guide-tones:417289699:64:dom7 guide-tones:dom7:4",
  "guide-tones:1004915213:69:dom7 guide-tones:dom7:9",
  "guide-tones:2497763982:69:min7 guide-tones:min7:9",
  "guide-tones:2683813001:65:maj7 guide-tones:maj7:5",
  "guide-tones:2743841621:69:dom7 guide-tones:dom7:9",
  "guide-tones:2420011518:66:min7 guide-tones:min7:6",
  "guide-tones:3008018372:64:dom7 guide-tones:dom7:4",
  "guide-tones:4194675987:67:maj7 guide-tones:maj7:7",
  "guide-tones:522634105:63:dom7 guide-tones:dom7:3",
  "guide-tones:613992015:65:min7 guide-tones:min7:5",
  "digest a0a3fb55ece1a",
]
`;

exports[`seeded questions are reproducible > interval-recognition on 36–96 1`] = `
[
  "interval-recognition:3049564378:66:5 interval-recognition:5:asc",
  "interval-recognition:1229806541:49:12 interval-recognition:12:asc",
  "interval-recognition:4088390650:69:3 interval-recognition:3:asc",
  "interval-recognition:437054851:63:12 interval-recognition:12:asc",
  "interval-recognition:1625275450:67:1 interval-recognition:1:asc",
  "interval-recognition:2809356655:68:4 interval-recognition:4:asc",
  "interval-recognition:1349385467:53:2 interval-recognition:2:asc",
  "interval-recognition:1322310304:71:5 interval-recognition:5:asc",
  "interval-recognition:2408301486:69:12 interval-recognition:12:asc",
  "interval-recognition:1578858717:51:1 interval-recognition:1:asc",
  "interval-recognition:4280561179:69:3 interval-recognition:3:asc",
  "interval-recognition:1902375489:68:7 interval-recognition:7:asc",
  "interval-recognition:2887960625:51:5 interval-recognition:5:asc",
  "interval-recognition:1771709723:69:1 interval-recognition:1:asc",
  "interval-recognition:1331219900:66:1 interval-recognition:1:asc",
  "interval-recognition:2357852598:71:4 interval-recognition:4:asc",
  "interval-recognition:3604519556:57:2 interval-recognition:2:asc",
  "interval-recognition:3328085047:66:5 interval-recognition:5:asc",
  "interval-recognition:802178832:52:3 interval-recognition:3:asc",
  "interval-recognition:1015807178:60:1 interval-recognition:1:asc",
  "interval-recognition:1478656000:61:12 interval-recognition:12:asc",
  "interval-recognition:1407510702:61:4 interval-recognition:4:asc",
  "interval-recognition:224389223:62:12 interval-recognition:12:asc",
  "interval-recognition:1252467533:69:3 interval-recognition:3:asc",
  "interval-recognition:250199772:68:1 interval-recognition:1:asc",
  "interval-recognition:1572672275:55:2 interval-recognition:2:asc",
  "interval-recognition:2230745728:48:3 interval-recognition:3:asc",
  "interval-recognition:1100955143:54:7 interval-recognition:7:asc",
  "interval-recognition:4046152680:59:3 interval-recognition:3:asc",
  "interval-recognition:57008084:63:1 interval-recognition:1:asc",
  "interval-recognition:3104400155:48:5 interval-recognition:5:asc",
  "interval-recognition:406931602:71:12 interval-recognition:12:asc",
  "interval-recognition:3089037264:63:2 interval-recognition:2:asc",
  "interval-recognition:3827084074:51:5 interval-recognition:5:asc",
  "interval-recognition:3064412148:64:1 interval-recognition:1:asc",
  "interval-recognition:2657774992:70:5 interval-recognition:5:asc",
  "interval-recognition:892918190:70:12 interval-recognition:12:asc",
  "interval-recognition:3637854298:53:4 interval-recognition:4:asc",
  "interval-recognition:3483810387:71:3 interval-recognition:3:asc",
  "interval-recognition:621952388:52:1 interval-recognition:1:asc",
  "interval-recognition:417289699:59:3 interval-recognition:3:asc",
  "interval-recognition:1004915213:50:12 interval-recognition:12:asc",
  "interval-recognition:2497763982:60:1 interval-recognition:1:asc",
  "interval-recognition:2683813001:64:2 interval-recognition:2:asc",
  "interval-recognition:2743841621:50:1 interval-recognition:1:asc",
  "interval-recognition:2420011518:65:5 interval-recognition:5:asc",
  "interval-recognition:3008018372:60:4 interval-recognition:4:asc",
  "interval-recognition:4194675987:68:2 interval-recognition:2:asc",
  "interval-recognition:522634105:57:5 interval-recognition:5:asc",
  "interval-recognition:613992015:49:1 interval-recognition:1:asc",
  "digest 335993bf82c1c",
]
`;

exports[`seeded questions are reproducible > interval-recognition on 48–72 1`] = `
[
  "interval-recognition:3049564378:63:5 interval-recognition:5:asc",
  "interval-recognition:1229806541:48:12 interval-recognition:12:asc",
  "interval-recognition:4088390650:67:3 interval-recognition:3:asc",
  "interval-recognition:437054851:55:12 interval-recognition:12:asc",
  "interval-recognition:1625275450:66:1 interval-recognition:1:asc",
  "interval-recognition:2809356655:65:4 interval-recognition:4:asc",
  "interval-recognition:1349385467:52:2 interval-recognition:2:asc",
  "interval-recognition:1322310304:67:5 interval-recognition:5:asc",
  "interval-recognition:2408301486:58:12 interval-recognition:12:asc",
  "interval-recognition:1578858717:51:1 interval-recognition:1:asc",
  "interval-recognition:4280561179:66:3 interval-recognition:3:asc",
  "interval-recognition:1902375489:62:7 interval-recognition:7:asc",
  "interval-recognition:2887960625:50:5 interval-recognition:5:asc",
  "interval-recognition:1771709723:68:1 interval-recognition:1:asc",
  "interval-recognition:1331219900:66:1 interval-recognition:1:asc",
  "interval-recognition:2357852598:67:4 interval-recognition:4:asc",
  "interval-recognition:3604519556:56:2 interval-recognition:2:asc",
  "interval-recognition:3328085047:62:5 interval-recognition:5:asc",
  "interval-recognition:802178832:51:3 interval-recognition:3:asc",
  "interval-recognition:1015807178:60:1 interval-recognition:1:asc",
  "interval-recognition:1478656000:55:12 interval-recognition:12:asc",
  "interval-recognition:1407510702:59:4 interval-recognition:4:asc",
  "interval-recognition:224389223:55:12 interval-recognition:12:asc",
  "interval-recognition:1252467533:66:3 interval-recognition:3:asc",
  "interval-recognition:250199772:67:1 interval-recognition:1:asc",
  "interval-recognition:1572672275:54:2 interval-recognition:2:asc",
  "interval-recognition:2230745728:48:3 interval-recognition:3:asc",
  "interval-recognition:1100955143:52:7 interval-recognition:7:asc",
  "interval-recognition:4046152680:58:3 interval-recognition:3:asc",
  "interval-recognition:57008084:62:1 interval-recognition:1:asc",
  "interval-recognition:3104400155:48:5 interval-recognition:5:asc",
  "interval-recognition:406931602:60:12 interval-recognition:12:asc",
  "interval-recognition:3089037264:61:2 interval-recognition:2:asc",
  "interval-recognition:3827084074:50:5 interval-recognition:5:asc",
  "interval-recognition:3064412148:64:1 interval-recognition:1:asc",
  "interval-recognition:2657774992:65:5 interval-recognition:5:asc",
  "interval-recognition:892918190:59:12 interval-recognition:12:asc",
  "interval-recognition:3637854298:52:4 interval-recognition:4:asc",
  "interval-recognition:3483810387:68:3 interval-recognition:3:asc",
  "interval-recognition:621952388:52:1 interval-recognition:1:asc",
  "interval-recognition:417289699:58:3 interval-recognition:3:asc",
  "interval-recognition:1004915213:49:12 interval-recognition:12:asc",
  "interval-recognition:2497763982:60:1 interval-recognition:1:asc",
  "interval-recognition:2683813001:62:2 interval-recognition:2:asc",
  "interval-recognition:2743841621:50:1 interval-recognition:1:asc",
  "interval-recognition:2420011518:61:5 interval-recognition:5:asc",
  "interval-recognition:3008018372:58:4 interval-recognition:4:asc",
  "interval-recognition:4194675987:67:2 interval-recognition:2:asc",
  "interval-recognition:522634105:55:5 interval-recognition:5:asc",
  "interval-recognition:613992015:49:1 interval-recognition:1:asc",
  "digest 159c9f797b0461",
]
`;

exports[`seeded questions are reproducible > interval-recognition on 60–72 1`] = `
[
  "interval-recognition:3049564378:66:5 interval-recognition:5:asc",
  "interval-recognition:1229806541:60:12 interval-recognition:12:asc",
  "interval-recognition:4088390650:68:3 interval-recognition:3:asc",
  "interval-recognition:437054851:60:12 interval-recognition:12:asc",
  "interval-recognition:1625275450:69:1 interval-recognition:1:asc",
  "interval-recognition:2809356655:67:4 interval-recognition:4:asc",
  "interval-recognition:1349385467:62:2 interval-recognition:2:asc",
  "interval-recognition:1322310304:67:5 interval-recognition:5:asc",
  "interval-recognition:2408301486:60:12 interval-recognition:12:asc",
  "interval-recognition:1578858717:61:1 interval-recognition:1:asc",
  "interval-recognition:4280561179:68:3 interval-recognition:3:asc",
  "interval-recognition:1902375489:64:7 interval-recognition:7:asc",
  "interval-recognition:2887960625:61:5 interval-recognition:5:asc",
  "interval-recognition:1771709723:70:1 interval-recognition:1:asc",
  "interval-recognition:1331219900:69:1 interval-recognition:1:asc",
  "interval-recognition:2357852598:68:4 interval-recognition:4:asc",
  "interval-recognition:3604519556:64:2 interval-recognition:2:asc",
  "interval-recognition:3328085047:65:5 interval-recognition:5:asc",
  "interval-recognition:802178832:61:3 interval-recognition:3:asc",
  "interval-recognition:1015807178:66:1 interval-recognition:1:asc",
  "interval-recognition:1478656000:60:12 interval-recognition:12:asc",
  "interval-recognition:1407510702:64:4 interval-recognition:4:asc",
  "interval-recognition:224389223:60:12 interval-recognition:12:asc",
  "interval-recognition:1252467533:68:3 interval-recognition:3:asc",
  "interval-recognition:250199772:69:1 interval-recognition:1:asc",
  "interval-recognition:1572672275:63:2 interval-recognition:2:asc",
  "interval-recognition:2230745728:60:3 interval-recognition:3:asc",
  "interval-recognition:1100955143:61:7 interval-recognition:7:asc",
  "interval-recognition:4046152680:64:3 interval-recognition:3:asc",
  "interval-recognition:57008084:67:1 interval-recognition:1:asc",
  "interval-recognition:3104400155:60:5 interval-recognition:5:asc",
  "interval-recognition:406931602:60:12 interval-recognition:12:asc",
  "interval-recognition:3089037264:66:2 interval-recognition:2:asc",
  "interval-recognition:3827084074:61:5 interval-recognition:5:asc",
  "interval-recognition:3064412148:68:1 interval-recognition:1:asc",
  "interval-recognition:2657774992:67:5 interval-recognition:5:asc",
  "interval-recognition:892918190:60:12 interval-recognition:12:asc",
  "interval-recognition:3637854298:62:4 interval-recognition:4:asc",
  "interval-recognition:3483810387:69:3 interval-recognition:3:asc",
  "interval-recognition:621952388:62:1 interval-recognition:1:asc",
  "interval-recognition:417289699:64:3 interval-recognition:3:asc",
  "interval-recognition:1004915213:60:12 interval-recognition:12:asc",
  "interval-recognition:2497763982:66:1 interval-recognition:1:asc",
  "interval-recognition:2683813001:67:2 interval-recognition:2:asc",
  "interval-recognition:2743841621:61:1 interval-recognition:1:asc",
  "interval-recognition:2420011518:65:5 interval-recognition:5:asc",
  "interval-recognition:3008018372:64:4 interval-recognition:4:asc",
  "interval-recognition:4194675987:69:2 interval-recognition:2:asc",
  "interval-recognition:522634105:63:5 interval-recognition:5:asc",
  "interval-recognition:613992015:60:1 interval-recognition:1:asc",
  "digest 85e5791f9dbad",
]
`;

exports[`seeded questions are reproducible > interval-recognition on 60–79 1`] = `
[
  "interval-recognition:3049564378:69:5 interval-recognition:5:asc",
  "interval-recognition:1229806541:60:12 interval-recognition:12:asc",
  "interval-recognition:4088390650:71:3 interval-recognition:3:asc",
  "interval-recognition:437054851:64:12 interval-recognition:12:asc",
  "interval-recognition:1625275450:70:1 interval-recognition:1:asc",
  "interval-recognition:2809356655:70:4 interval-recognition:4:asc",
  "interval-recognition:1349385467:62:2 interval-recognition:2:asc",
  "interval-recognition:1322310304:72:5 interval-recognition:5:asc",
  "interval-recognition:2408301486:66:12 interval-recognition:12:asc",
  "interval-recognition:1578858717:61:1 interval-recognition:1:asc",
  "interval-recognition:4280561179:70:3 interval-recognition:3:asc",
  "interval-recognition:1902375489:70:7 interval-recognition:7:asc",
  "interval-recognition:2887960625:61:5 interval-recognition:5:asc",
  "interval-recognition:1771709723:71:1 interval-recognition:1:asc",
  "interval-recognition:1331219900:69:1 interval-recognition:1:asc",
  "interval-recognition:2357852598:72:4 interval-recognition:4:asc",
  "interval-recognition:3604519556:64:2 interval-recognition:2:asc",
  "interval-recognition:3328085047:69:5 interval-recognition:5:asc",
  "interval-recognition:802178832:62:3 interval-recognition:3:asc",
  "interval-recognition:1015807178:66:1 interval-recognition:1:asc",
  "interval-recognition:1478656000:64:12 interval-recognition:12:asc",
  "interval-recognition:1407510702:67:4 interval-recognition:4:asc",
  "interval-recognition:224389223:64:12 interval-recognition:12:asc",
  "interval-recognition:1252467533:71:3 interval-recognition:3:asc",
  "interval-recognition:250199772:70:1 interval-recognition:1:asc",
  "interval-recognition:1572672275:63:2 interval-recognition:2:asc",
  "interval-recognition:2230745728:60:3 interval-recognition:3:asc",
  "interval-recognition:1100955143:63:7 interval-recognition:7:asc",
  "interval-recognition:4046152680:66:3 interval-recognition:3:asc",
  "interval-recognition:57008084:68:1 interval-recognition:1:asc",
  "interval-recognition:3104400155:60:5 interval-recognition:5:asc",
  "interval-recognition:406931602:67:12 interval-recognition:12:asc",
  "interval-recognition:3089037264:67:2 interval-recognition:2:asc",
  "interval-recognition:3827084074:61:5 interval-recognition:5:asc",
  "interval-recognition:3064412148:68:1 interval-recognition:1:asc",
  "interval-recognition:2657774992:71:5 interval-recognition:5:asc",
  "interval-recognition:892918190:67:12 interval-recognition:12:asc",
  "interval-recognition:3637854298:62:4 interval-recognition:4:asc",
  "interval-recognition:3483810387:72:3 interval-recognition:3:asc",
  "interval-recognition:621952388:62:1 interval-recognition:1:asc",
  "interval-recognition:417289699:66:3 interval-recognition:3:asc",
  "interval-recognition:1004915213:60:12 interval-recognition:12:asc",
  "interval-recognition:2497763982:66:1 interval-recognition:1:asc",
  "interval-recognition:2683813001:68:2 interval-recognition:2:asc",
  "interval-recognition:2743841621:61:1 interval-recognition:1:asc",
  "interval-recognition:2420011518:69:5 interval-recognition:5:asc",
  "interval-recognition:3008018372:66:4 interval-recognition:4:asc",
  "interval-recognition:4194675987:70:2 interval-recognition:2:asc",
  "interval-recognition:522634105:64:5 interval-recognition:5:asc",
  "interval-recognition:613992015:60:1 interval-recognition:1:asc",
  "digest 1bdb28a79a7f7b",
]
`;

exports[`seeded questions are reproducible > play-the-voicing on 36–96 1`] = `
[
  "play-the-voicing:3049564378:45:min7 play-the-voicing:min7:9",
  "play-the-voicing:1229806541:48:min7 play-the-voicing:min7:0",
  "play-the-voicing:4088390650:51:min7 play-the-voicing:min7:3",
  "play-the-voicing:437054851:55:min7 play-the-voicing:min7:7",
  "play-the-voicing:1625275450:52:min7 play-the-voicing:min7:4",
  "play-the-voicing:2809356655:45:dom7 play-the-voicing:dom7:9",
  "play-the-voicing:1349385467:38:maj7 play-the-voicing:maj7:2",
  "play-the-voicing:1322310304:47:dom7 play-the-voicing:dom7:11",
  "play-the-voicing:2408301486:46:min7 play-the-voicing:min7:10",
  "play-the-voicing:1578858717:39:min7 play-the-voicing:min7:3",
  "play-the-voicing:4280561179:46:maj7 play-the-voicing:maj7:10",
  "play-the-voicing:1902375489:45:min7 play-the-voicing:min7:9",
  "play-the-voicing:2887960625:37:min7 play-the-voicing:min7:1",
  "play-the-voicing:1771709723:46:maj7 play-the-voicing:maj7:10",
  "play-the-voicing:1331219900:50:min7 play-the-voicing:min7:2",
  "play-the-voicing:2357852598:47:dom7 play-the-voicing:dom7:11",
  "play-the-voicing:3604519556:52:maj7 play-the-voicing:maj7:4",
  "play-the-voicing:3328085047:44:dom7 play-the-voicing:dom7:8",
  "play-the-voicing:802178832:40:min7 play-the-voicing:min7:4",
  "play-the-voicing:1015807178:49:min7 play-the-voicing:min7:1",
  "play-the-voicing:1478656000:54:min7 play-the-voicing:min7:6",
  "play-the-voicing:1407510702:42:dom7 play-the-voicing:dom7:6",
  "play-the-voicing:224389223:46:dom7 play-the-voicing:dom7:10",
  "play-the-voicing:1252467533:46:maj7 play-the-voicing:maj7:10",
  "play-the-voicing:250199772:48:min7 play-the-voicing:min7:0",
  "play-the-voicing:1572672275:51:maj7 play-the-voicing:maj7:3",
  "play-the-voicing:2230745728:36:dom7 play-the-voicing:dom7:0",
  "play-the-voicing:1100955143:50:min7 play-the-voicing:min7:2",
  "play-the-voicing:4046152680:53:dom7 play-the-voicing:dom7:5",
  "play-the-voicing:57008084:47:dom7 play-the-voicing:dom7:11",
  "play-the-voicing:3104400155:48:dom7 play-the-voicing:dom7:0",
  "play-the-voicing:406931602:47:min7 play-the-voicing:min7:11",
  "play-the-voicing:3089037264:55:maj7 play-the-voicing:maj7:7",
  "play-the-voicing:3827084074:49:dom7 play-the-voicing:dom7:1",
  "play-the-voicing:3064412148:46:dom7 play-the-voicing:dom7:10",
  "play-the-voicing:2657774992:37:dom7 play-the-voicing:dom7:1",
  "play-the-voicing:892918190:47:min7 play-the-voicing:min7:11",
  "play-the-voicing:3637854298:50:dom7 play-the-voicing:dom7:2",
  "play-the-voicing:3483810387:47:dom7 play-the-voicing:dom7:11",
  "play-the-voicing:621952388:45:dom7 play-the-voicing:dom7:9",
  "play-the-voicing:417289699:41:dom7 play-the-voicing:dom7:5",
  "play-the-voicing:1004915213:47:dom7 play-the-voicing:dom7:11",
  "play-the-voicing:2497763982:47:min7 play-the-voicing:min7:11",
  "play-the-voicing:2683813001:55:maj7 play-the-voicing:maj7:7",
  "play-the-voicing:2743841621:44:dom7 play-the-voicing:dom7:8",
  "play-the-voicing:2420011518:44:min7 play-the-voicing:min7:8",
  "play-the-voicing:3008018372:41:dom7 play-the-voicing:dom7:5",
  "play-the-voicing:4194675987:46:maj7 play-the-voicing:maj7:10",
  "play-the-voicing:522634105:52:dom7 play-the-voicing:dom7:4",
  "play-the-voicing:613992015:43:dom7 play-the-voicing:dom7:7",
  "digest 141941a1df75a9",
]
`;

exports[`seeded questions are reproducible > play-the-voicing on 48–72 1`] = `
[
  "play-the-voicing:3049564378:57:min7 play-the-voicing:min7:9",
  "play-the-voicing:1229806541:48:min7 play-the-voicing:min7:0",
  "play-the-voicing:4088390650:51:min7 play-the-voicing:min7:3",
  "play-the-voicing:437054851:55:min7 play-the-voicing:min7:7",
  "play-the-voicing:1625275450:52:min7 play-the-voicing:min7:4",
  "play-the-voicing:2809356655:57:dom7 play-the-voicing:dom7:9",
  "play-the-voicing:1349385467:50:maj7 play-the-voicing:maj7:2",
  "play-the-voicing:1322310304:59:dom7 play-the-voicing:dom7:11",
  "play-the-voicing:2408301486:58:min7 play-the-voicing:min7:10",
  "play-the-voicing:1578858717:51:min7 play-the-voicing:min7:3",
  "play-the-voicing:4280561179:58:maj7 play-the-voicing:maj7:10",
  "play-the-voicing:1902375489:57:min7 play-the-voicing:min7:9",
  "play-the-voicing:2887960625:49:min7 play-the-voicing:min7:1",
  "play-the-voicing:1771709723:58:maj7 play-the-voicing:maj7:10",
  "play-the-voicing:1331219900:50:min7 play-the-voicing:min7:2",
  "play-the-voicing:2357852598:59:dom7 play-the-voicing:dom7:11",
  "play-the-voicing:3604519556:52:maj7 play-the-voicing:maj7:4",
  "play-the-voicing:3328085047:56:dom7 play-the-voicing:dom7:8",
  "play-the-voicing:802178832:52:min7 play-the-voicing:min7:4",
  "play-the-voicing:1015807178:49:min7 play-the-voicing:min7:1",
  "play-the-voicing:1478656000:54:min7 play-the-voicing:min7:6",
  "play-the-voicing:1407510702:54:dom7 play-the-voicing:dom7:6",
  "play-the-voicing:224389223:58:dom7 play-the-voicing:dom7:10",
  "play-the-voicing:1252467533:58:maj7 play-the-voicing:maj7:10",
  "play-the-voicing:250199772:48:min7 play-the-voicing:min7:0",
  "play-the-voicing:1572672275:51:maj7 play-the-voicing:maj7:3",
  "play-the-voicing:2230745728:48:dom7 play-the-voicing:dom7:0",
  "play-the-voicing:1100955143:50:min7 play-the-voicing:min7:2",
  "play-the-voicing:4046152680:53:dom7 play-the-voicing:dom7:5",
  "play-the-voicing:57008084:59:dom7 play-the-voicing:dom7:11",
  "play-the-voicing:3104400155:48:dom7 play-the-voicing:dom7:0",
  "play-the-voicing:406931602:59:min7 play-the-voicing:min7:11",
  "play-the-voicing:3089037264:55:maj7 play-the-voicing:maj7:7",
  "play-the-voicing:3827084074:49:dom7 play-the-voicing:dom7:1",
  "play-the-voicing:3064412148:58:dom7 play-the-voicing:dom7:10",
  "play-the-voicing:2657774992:49:dom7 play-the-voicing:dom7:1",
  "play-the-voicing:892918190:59:min7 play-the-voicing:min7:11",
  "play-the-voicing:3637854298:50:dom7 play-the-voicing:dom7:2",
  "play-the-voicing:3483810387:59:dom7 play-the-voicing:dom7:11",
  "play-the-voicing:621952388:57:dom7 play-the-voicing:dom7:9",
  "play-the-voicing:417289699:53:dom7 play-the-voicing:dom7:5",
  "play-the-voicing:1004915213:59:dom7 play-the-voicing:dom7:11",
  "play-the-voicing:2497763982:59:min7 play-the-voicing:min7:11",
  "play-the-voicing:2683813001:55:maj7 play-the-voicing:maj7:7",
  "play-the-voicing:2743841621:56:dom7 play-the-voicing:dom7:8",
  "play-the-voicing:2420011518:56:min7 play-the-voicing:min7:8",
  "play-the-voicing:3008018372:53:dom7 play-the-voicing:dom7:5",
  "play-the-voicing:4194675987:58:maj7 play-the-voicing:maj7:10",
  "play-the-voicing:522634105:52:dom7 play-the-voicing:dom7:4",
  "play-the-voicing:613992015:55:dom7 play-the-voicing:dom7:7",
  "digest 1bba622234f8e5",
]
`;

exports[`seeded questions are reproducible > play-the-voicing on 60–72 1`] = `
[
  "play-the-voicing:3049564378:62:min7 play-the-voicing:min7:2",
  "play-the-voicing:1229806541:60:min7 play-the-voicing:min7:0",
  "play-the-voicing:4088390650:61:min7 play-the-voicing:min7:1",
  "play-the-voicing:437054851:62:dom7 play-the-voicing:dom7:2",
  "play-the-voicing:1625275450:62:dom7 play-the-voicing:dom7:2",
  "play-the-voicing:2809356655:61:maj7 play-the-voicing:maj7:1",
  "play-the-voicing:1349385467:60:maj7 play-the-voicing:maj7:0",
  "play-the-voicing:1322310304:62:dom7 play-the-voicing:dom7:2",
  "play-the-voicing:2408301486:62:min7 play-the-voicing:min7:2",
  "play-the-voicing:1578858717:62:min7 play-the-voicing:min7:2",
  "play-the-voicing:4280561179:61:maj7 play-the-voicing:maj7:1",
  "play-the-voicing:1902375489:62:min7 play-the-voicing:min7:2",
  "play-the-voicing:2887960625:60:min7 play-the-voicing:min7:0",
  "play-the-voicing:1771709723:61:maj7 play-the-voicing:maj7:1",
  "play-the-voicing:1331219900:60:dom7 play-the-voicing:dom7:0",
  "play-the-voicing:2357852598:62:dom7 play-the-voicing:dom7:2",
  "play-the-voicing:3604519556:60:maj7 play-the-voicing:maj7:0",
  "play-the-voicing:3328085047:62:dom7 play-the-voicing:dom7:2",
  "play-the-voicing:802178832:61:min7 play-the-voicing:min7:1",
  "play-the-voicing:1015807178:60:min7 play-the-voicing:min7:0",
  "play-the-voicing:1478656000:61:min7 play-the-voicing:min7:1",
  "play-the-voicing:1407510702:61:dom7 play-the-voicing:dom7:1",
  "play-the-voicing:224389223:62:dom7 play-the-voicing:dom7:2",
  "play-the-voicing:1252467533:61:maj7 play-the-voicing:maj7:1",
  "play-the-voicing:250199772:60:maj7 play-the-voicing:maj7:0",
  "play-the-voicing:1572672275:60:min7 play-the-voicing:min7:0",
  "play-the-voicing:2230745728:60:dom7 play-the-voicing:dom7:0",
  "play-the-voicing:1100955143:60:min7 play-the-voicing:min7:0",
  "play-the-voicing:4046152680:61:dom7 play-the-voicing:dom7:1",
  "play-the-voicing:57008084:61:dom7 play-the-voicing:dom7:1",
  "play-the-voicing:3104400155:60:dom7 play-the-voicing:dom7:0",
  "play-the-voicing:406931602:62:min7 play-the-voicing:min7:2",
  "play-the-voicing:3089037264:61:maj7 play-the-voicing:maj7:1",
  "play-the-voicing:3827084074:60:dom7 play-the-voicing:dom7:0",
  "play-the-voicing:3064412148:61:min7 play-the-voicing:min7:1",
  "play-the-voicing:2657774992:62:dom7 play-the-voicing:dom7:2",
  "play-the-voicing:892918190:62:min7 play-the-voicing:min7:2",
  "play-the-voicing:3637854298:60:dom7 play-the-voicing:dom7:0",
  "play-the-voicing:3483810387:62:dom7 play-the-voicing:dom7:2",
  "play-the-voicing:621952388:61:maj7 play-the-voicing:maj7:1",
  "play-the-voicing:417289699:61:dom7 play-the-voicing:dom7:1",
  "play-the-voicing:1004915213:62:dom7 play-the-voicing:dom7:2",
  "play-the-voicing:2497763982:62:min7 play-the-voicing:min7:2",
  "play-the-voicing:2683813001:61:maj7 play-the-voicing:maj7:1",
  "play-the-voicing:2743841621:62:dom7 play-the-voicing:dom7:2",
  "play-the-voicing:2420011518:62:min7 play-the-voicing:min7:2",
  "play-the-voicing:3008018372:61:dom7 play-the-voicing:dom7:1",
  "play-the-voicing:4194675987:61:maj7 play-the-voicing:maj7:1",
  "play-the-voicing:522634105:61:dom7 play-the-voicing:dom7:1",
  "play-the-voicing:613992015:62:min7 play-the-voicing:min7:2",
  "digest 1c7b0f9afab8a0",
]
`;

exports[`seeded questions are reproducible > play-the-voicing on 60–79 1`] = `
[
  "play-the-voicing:3049564378:67:min7 play-the-voicing:min7:7",
  "play-the-voicing:1229806541:60:min7 play-the-voicing:min7:0",
  "play-the-voicing:4088390650:62:min7 play-the-voicing:min7:2",
  "play-the-voicing:437054851:66:min7 play-the-voicing:min7:6",
  "play-the-voicing:1625275450:69:min7 play-the-voicing:min7:9",
  "play-the-voicing:2809356655:68:dom7 play-the-voicing:dom7:8",
  "play-the-voicing:1349385467:61:maj7 play-the-voicing:maj7:1",
  "play-the-voicing:1322310304:69:dom7 play-the-voicing:dom7:9",
  "play-the-voicing:2408301486:68:min7 play-the-voicing:min7:8",
  "play-the-voicing:1578858717:65:maj7 play-the-voicing:maj7:5",
  "play-the-voicing:4280561179:67:maj7 play-the-voicing:maj7:7",
  "play-the-voicing:1902375489:68:min7 play-the-voicing:min7:8",
  "play-the-voicing:2887960625:61:min7 play-the-voicing:min7:1",
  "play-the-voicing:1771709723:67:maj7 play-the-voicing:maj7:7",
  "play-the-voicing:1331219900:62:dom7 play-the-voicing:dom7:2",
  "play-the-voicing:2357852598:69:dom7 play-the-voicing:dom7:9",
  "play-the-voicing:3604519556:63:maj7 play-the-voicing:maj7:3",
  "play-the-voicing:3328085047:67:dom7 play-the-voicing:dom7:7",
  "play-the-voicing:802178832:63:min7 play-the-voicing:min7:3",
  "play-the-voicing:1015807178:68:dom7 play-the-voicing:dom7:8",
  "play-the-voicing:1478656000:65:min7 play-the-voicing:min7:5",
  "play-the-voicing:1407510702:65:dom7 play-the-voicing:dom7:5",
  "play-the-voicing:224389223:68:dom7 play-the-voicing:dom7:8",
  "play-the-voicing:1252467533:68:maj7 play-the-voicing:maj7:8",
  "play-the-voicing:250199772:64:min7 play-the-voicing:min7:4",
  "play-the-voicing:1572672275:62:maj7 play-the-voicing:maj7:2",
  "play-the-voicing:2230745728:60:dom7 play-the-voicing:dom7:0",
  "play-the-voicing:1100955143:62:min7 play-the-voicing:min7:2",
  "play-the-voicing:4046152680:64:dom7 play-the-voicing:dom7:4",
  "play-the-voicing:57008084:60:maj7 play-the-voicing:maj7:0",
  "play-the-voicing:3104400155:60:dom7 play-the-voicing:dom7:0",
  "play-the-voicing:406931602:69:min7 play-the-voicing:min7:9",
  "play-the-voicing:3089037264:65:maj7 play-the-voicing:maj7:5",
  "play-the-voicing:3827084074:61:dom7 play-the-voicing:dom7:1",
  "play-the-voicing:3064412148:66:maj7 play-the-voicing:maj7:6",
  "play-the-voicing:2657774992:68:dom7 play-the-voicing:dom7:8",
  "play-the-voicing:892918190:69:min7 play-the-voicing:min7:9",
  "play-the-voicing:3637854298:62:dom7 play-the-voicing:dom7:2",
  "play-the-voicing:3483810387:69:dom7 play-the-voicing:dom7:9",
  "play-the-voicing:621952388:63:dom7 play-the-voicing:dom7:3",
  "play-the-voicing:417289699:64:dom7 play-the-voicing:dom7:4",
  "play-the-voicing:1004915213:69:dom7 play-the-voicing:dom7:9",
  "play-the-voicing:2497763982:69:min7 play-the-voicing:min7:9",
  "play-the-voicing:2683813001:65:maj7 play-the-voicing:maj7:5",
  "play-the-voicing:2743841621:69:dom7 play-the-voicing:dom7:9",
  "play-the-voicing:2420011518:66:min7 play-the-voicing:min7:6",
  "play-the-voicing:3008018372:64:dom7 play-the-voicing:dom7:4",
  "play-the-voicing:4194675987:67:maj7 play-the-voicing:maj7:7",
  "play-the-voicing:522634105:63:dom7 play-the-voicing:dom7:3",
  "play-the-voicing:613992015:65:min7 play-the-voicing:min7:5",
  "digest 1182aeef7bc0b4",
]
`;

exports[`seeded questions are reproducible > progression-recognition on 36–96 1`] = `
[
  "progression-recognition:3049564378:45:minor-ii-V-i progression-recognition:minor-ii-V-i:9",
  "progression-recognition:1229806541:48:minor-ii-V-i progression-recognition:minor-ii-V-i:0",
  "progression-recognition:4088390650:51:minor-ii-V-i progression-recognition:minor-ii-V-i:3",
  "progression-recognition:437054851:55:minor-ii-V-i progression-recognition:minor-ii-V-i:7",
  "progression-recognition:1625275450:52:major-ii-V-I progression-recognition:major-ii-V-I:4",
  "progression-recognition:2809356655:45:major-ii-V-I progression-recognition:major-ii-V-I:9",
  "progression-recognition:1349385467:50:major-ii-V-I progression-recognition:major-ii-V-I:2",
  "progression-recognition:1322310304:47:minor-ii-V-i progression-recognition:minor-ii-V-i:11",
  "progression-recognition:2408301486:46:minor-ii-V-i progression-recognition:minor-ii-V-i:10",
  "progression-recognition:1578858717:51:minor-ii-V-i progression-recognition:minor-ii-V-i:3",
  "progression-recognition:4280561179:46:major-ii-V-I progression-recognition:major-ii-V-I:10",
  "progression-recognition:1902375489:45:minor-ii-V-i progression-recognition:minor-ii-V-i:9",
  "progression-recognition:2887960625:49:minor-ii-V-i progression-recognition:minor-ii-V-i:1",
  "progression-recognition:1771709723:46:major-ii-V-I progression-recognition:major-ii-V-I:10",
  "progression-recognition:1331219900:50:major-ii-V-I progression-recognition:major-ii-V-I:2",
  "progression-recognition:2357852598:47:major-ii-V-I progression-recognition:major-ii-V-I:11",
  "progression-recognition:3604519556:52:major-ii-V-I progression-recognition:major-ii-V-I:4",
  "progression-recognition:3328085047:44:minor-ii-V-i progression-recognition:minor-ii-V-i:8",
  "progression-recognition:802178832:52:minor-ii-V-i progression-recognition:minor-ii-V-i:4",
  "progression-recognition:1015807178:49:minor-ii-V-i progression-recognition:minor-ii-V-i:1",
  "progression-recognition:1478656000:54:minor-ii-V-i progression-recognition:minor-ii-V-i:6",
  "progression-recognition:1407510702:48:major-ii-V-I progression-recognition:major-ii-V-I:0",
  "progression-recognition:224389223:46:minor-ii-V-i progression-recognition:minor-ii-V-i:10",
  "progression-recognition:1252467533:46:major-ii-V-I progression-recognition:major-ii-V-I:10",
  "progression-recognition:250199772:48:major-ii-V-I progression-recognition:major-ii-V-I:0",
  "progression-recognition:1572672275:51:major-ii-V-I progression-recognition:major-ii-V-I:3",
  "progression-recognition:2230745728:48:major-ii-V-I progression-recognition:major-ii-V-I:0",
  "progression-recognition:1100955143:50:minor-ii-V-i progression-recognition:minor-ii-V-i:2",
  "progression-recognition:4046152680:53:major-ii-V-I progression-recognition:major-ii-V-I:5",
  "progression-recognition:57008084:47:major-ii-V-I progression-recognition:major-ii-V-I:11",
  "progression-recognition:3104400155:48:minor-ii-V-i progression-recognition:minor-ii-V-i:0",
  "progression-recognition:406931602:47:minor-ii-V-i progression-recognition:minor-ii-V-i:11",
  "progression-recognition:3089037264:55:major-ii-V-I progression-recognition:major-ii-V-I:7",
  "progression-recognition:3827084074:49:minor-ii-V-i progression-recognition:minor-ii-V-i:1",
  "progression-recognition:3064412148:46:minor-ii-V-i progression-recognition:minor-ii-V-i:10",
  "progression-recognition:2657774992:49:minor-ii-V-i progression-recognition:minor-ii-V-i:1",
  "progression-recognition:892918190:47:minor-ii-V-i progression-recognition:minor-ii-V-i:11",
  "progression-recognition:3637854298:50:minor-ii-V-i progression-recognition:minor-ii-V-i:2",
  "progression-recognition:3483810387:47:major-ii-V-I progression-recognition:major-ii-V-I:11",
  "progression-recognition:621952388:45:major-ii-V-I progression-recognition:major-ii-V-I:9",
  "progression-recognition:417289699:53:major-ii-V-I progression-recognition:major-ii-V-I:5",
  "progression-recognition:1004915213:47:major-ii-V-I progression-recognition:major-ii-V-I:11",
  "progression-recognition:2497763982:47:minor-ii-V-i progression-recognition:minor-ii-V-i:11",
  "progression-recognition:2683813001:55:major-ii-V-I progression-recognition:major-ii-V-I:7",
  "progression-recognition:2743841621:44:minor-ii-V-i progression-recognition:minor-ii-V-i:8",
  "progression-recognition:2420011518:48:major-ii-V-I progression-recognition:major-ii-V-I:0",
  "progression-recognition:3008018372:53:minor-ii-V-i progression-recognition:minor-ii-V-i:5",
  "progression-recognition:4194675987:46:major-ii-V-I progression-recognition:major-ii-V-I:10",
  "progression-recognition:522634105:52:minor-ii-V-i progression-recognition:minor-ii-V-i:4",
  "progression-recognition:613992015:43:major-ii-V-I progression-recognition:major-ii-V-I:7",
  "digest 1e8d6a902d469f",
]
`;

exports[`seeded questions are reproducible > progression-recognition on 48–72 1`] = `
[
  "progression-recognition:3049564378:58:minor-ii-V-i progression-recognition:minor-ii-V-i:10",
  "progression-recognition:1229806541:60:minor-ii-V-i progression-recognition:minor-ii-V-i:0",
  "progression-recognition:4088390650:54:minor-ii-V-i progression-recognition:minor-ii-V-i:6",
  "progression-recognition:437054851:56:minor-ii-V-i progression-recognition:minor-ii-V-i:8",
  "progression-recognition:1625275450:56:minor-ii-V-i progression-recognition:minor-ii-V-i:8",
  "progression-recognition:2809356655:58:major-ii-V-I progression-recognition:major-ii-V-I:10",
  "progression-recognition:1349385467:53:major-ii-V-I progression-recognition:major-ii-V-I:5",
  "progression-recognition:1322310304:59:minor-ii-V-i progression-recognition:minor-ii-V-i:11",
  "progression-recognition:2408301486:58:minor-ii-V-i progression-recognition:minor-ii-V-i:10",
  "progression-recognition:1578858717:59:minor-ii-V-i progression-recognition:minor-ii-V-i:11",
  "progression-recognition:4280561179:58:major-ii-V-I progression-recognition:major-ii-V-I:10",
  "progression-recognition:1902375489:58:minor-ii-V-i progression-recognition:minor-ii-V-i:10",
  "progression-recognition:2887960625:53:minor-ii-V-i progression-recognition:minor-ii-V-i:5",
  "progression-recognition:1771709723:58:major-ii-V-I progression-recognition:major-ii-V-I:10",
  "progression-recognition:1331219900:54:major-ii-V-I progression-recognition:major-ii-V-I:6",
  "progression-recognition:2357852598:59:major-ii-V-I progression-recognition:major-ii-V-I:11",
  "progression-recognition:3604519556:54:major-ii-V-I progression-recognition:major-ii-V-I:6",
  "progression-recognition:3328085047:57:minor-ii-V-i progression-recognition:minor-ii-V-i:9",
  "progression-recognition:802178832:55:minor-ii-V-i progression-recognition:minor-ii-V-i:7",
  "progression-recognition:1015807178:57:major-ii-V-I progression-recognition:major-ii-V-I:9",
  "progression-recognition:1478656000:56:minor-ii-V-i progression-recognition:minor-ii-V-i:8",
  "progression-recognition:1407510702:60:major-ii-V-I progression-recognition:major-ii-V-I:0",
  "progression-recognition:224389223:59:minor-ii-V-i progression-recognition:minor-ii-V-i:11",
  "progression-recognition:1252467533:58:major-ii-V-I progression-recognition:major-ii-V-I:10",
  "progression-recognition:250199772:60:minor-ii-V-i progression-recognition:minor-ii-V-i:0",
  "progression-recognition:1572672275:54:major-ii-V-I progression-recognition:major-ii-V-I:6",
  "progression-recognition:2230745728:60:major-ii-V-I progression-recognition:major-ii-V-I:0",
  "progression-recognition:1100955143:53:minor-ii-V-i progression-recognition:minor-ii-V-i:5",
  "progression-recognition:4046152680:55:major-ii-V-I progression-recognition:major-ii-V-I:7",
  "progression-recognition:57008084:55:minor-ii-V-i progression-recognition:minor-ii-V-i:7",
  "progression-recognition:3104400155:60:minor-ii-V-i progression-recognition:minor-ii-V-i:0",
  "progression-recognition:406931602:59:minor-ii-V-i progression-recognition:minor-ii-V-i:11",
  "progression-recognition:3089037264:56:major-ii-V-I progression-recognition:major-ii-V-I:8",
  "progression-recognition:3827084074:53:minor-ii-V-i progression-recognition:minor-ii-V-i:5",
  "progression-recognition:3064412148:58:minor-ii-V-i progression-recognition:minor-ii-V-i:10",
  "progression-recognition:2657774992:59:minor-ii-V-i progression-recognition:minor-ii-V-i:11",
  "progression-recognition:892918190:57:major-ii-V-I progression-recognition:major-ii-V-I:9",
  "progression-recognition:3637854298:53:minor-ii-V-i progression-recognition:minor-ii-V-i:5",
  "progression-recognition:3483810387:59:major-ii-V-I progression-recognition:major-ii-V-I:11",
  "progression-recognition:621952388:53:major-ii-V-I progression-recognition:major-ii-V-I:5",
  "progression-recognition:417289699:55:major-ii-V-I progression-recognition:major-ii-V-I:7",
  "progression-recognition:1004915213:59:major-ii-V-I progression-recognition:major-ii-V-I:11",
  "progression-recognition:2497763982:59:minor-ii-V-i progression-recognition:minor-ii-V-i:11",
  "progression-recognition:2683813001:57:major-ii-V-I progression-recognition:major-ii-V-I:9",
  "progression-recognition:2743841621:56:major-ii-V-I progression-recognition:major-ii-V-I:8",
  "progression-recognition:2420011518:57:minor-ii-V-i progression-recognition:minor-ii-V-i:9",
  "progression-recognition:3008018372:55:minor-ii-V-i progression-recognition:minor-ii-V-i:7",
  "progression-recognition:4194675987:58:major-ii-V-I progression-recognition:major-ii-V-I:10",
  "progression-recognition:522634105:55:minor-ii-V-i progression-recognition:minor-ii-V-i:7",
  "progression-recognition:613992015:59:major-ii-V-I progression-recognition:major-ii-V-I:11",
  "digest 88f8c4ecdb256",
]
`;

exports[`seeded questions are reproducible > progression-recognition on 60–72 1`] = `
[
  "3049564378 throws NothingToAskError",
  "1229806541 throws NothingToAskError",
  "4088390650 throws NothingToAskError",
  "437054851 throws NothingToAskError",
  "1625275450 throws NothingToAskError",
  "2809356655 throws NothingToAskError",
  "1349385467 throws NothingToAskError",
  "1322310304 throws NothingToAskError",
  "2408301486 throws NothingToAskError",
  "1578858717 throws NothingToAskError",
  "4280561179 throws NothingToAskError",
  "1902375489 throws NothingToAskError",
  "2887960625 throws NothingToAskError",
  "1771709723 throws NothingToAskError",
  "1331219900 throws NothingToAskError",
  "2357852598 throws NothingToAskError",
  "3604519556 throws NothingToAskError",
  "3328085047 throws NothingToAskError",
  "802178832 throws NothingToAskError",
  "1015807178 throws NothingToAskError",
  "1478656000 throws NothingToAskError",
  "1407510702 throws NothingToAskError",
  "224389223 throws NothingToAskError",
  "1252467533 throws NothingToAskError",
  "250199772 throws NothingToAskError",
  "1572672275 throws NothingToAskError",
  "2230745728 throws NothingToAskError",
  "1100955143 throws NothingToAskError",
  "4046152680 throws NothingToAskError",
  "57008084 throws NothingToAskError",
  "3104400155 throws NothingToAskError",
  "406931602 throws NothingToAskError",
  "3089037264 throws NothingToAskError",
  "3827084074 throws NothingToAskError",
  "3064412148 throws NothingToAskError",
  "2657774992 throws NothingToAskError",
  "892918190 throws NothingToAskError",
  "3637854298 throws NothingToAskError",
  "3483810387 throws NothingToAskError",
  "621952388 throws NothingToAskError",
  "417289699 throws NothingToAskError",
  "1004915213 throws NothingToAskError",
  "2497763982 throws NothingToAskError",
  "2683813001 throws NothingToAskError",
  "2743841621 throws NothingToAskError",
  "2420011518 throws NothingToAskError",
  "3008018372 throws NothingToAskError",
  "4194675987 throws NothingToAskError",
  "522634105 throws NothingToAskError",
  "613992015 throws NothingToAskError",
  "digest bdcb81aee8d83",
]
`;

exports[`seeded questions are reproducible > progression-recognition on 60–79 1`] = `
[
  "progression-recognition:3049564378:67:minor-ii-V-i progression-recognition:minor-ii-V-i:7",
  "progression-recognition:1229806541:65:minor-ii-V-i progression-recognition:minor-ii-V-i:5",
  "progression-recognition:4088390650:66:minor-ii-V-i progression-recognition:minor-ii-V-i:6",
  "progression-recognition:437054851:67:minor-ii-V-i progression-recognition:minor-ii-V-i:7",
  "progression-recognition:1625275450:66:minor-ii-V-i progression-recognition:minor-ii-V-i:6",
  "progression-recognition:2809356655:67:major-ii-V-I progression-recognition:major-ii-V-I:7",
  "progression-recognition:1349385467:65:major-ii-V-I progression-recognition:major-ii-V-I:5",
  "progression-recognition:1322310304:67:minor-ii-V-i progression-recognition:minor-ii-V-i:7",
  "progression-recognition:2408301486:65:minor-ii-V-i progression-recognition:minor-ii-V-i:5",
  "progression-recognition:1578858717:65:minor-ii-V-i progression-recognition:minor-ii-V-i:5",
  "progression-recognition:4280561179:67:major-ii-V-I progression-recognition:major-ii-V-I:7",
  "progression-recognition:1902375489:67:minor-ii-V-i progression-recognition:minor-ii-V-i:7",
  "progression-recognition:2887960625:65:minor-ii-V-i progression-recognition:minor-ii-V-i:5",
  "progression-recognition:1771709723:67:major-ii-V-I progression-recognition:major-ii-V-I:7",
  "progression-recognition:1331219900:67:major-ii-V-I progression-recognition:major-ii-V-I:7",
  "progression-recognition:2357852598:67:minor-ii-V-i progression-recognition:minor-ii-V-i:7",
  "progression-recognition:3604519556:66:major-ii-V-I progression-recognition:major-ii-V-I:6",
  "progression-recognition:3328085047:67:minor-ii-V-i progression-recognition:minor-ii-V-i:7",
  "progression-recognition:802178832:66:minor-ii-V-i progression-recognition:minor-ii-V-i:6",
  "progression-recognition:1015807178:66:major-ii-V-I progression-recognition:major-ii-V-I:6",
  "progression-recognition:1478656000:66:minor-ii-V-i progression-recognition:minor-ii-V-i:6",
  "progression-recognition:1407510702:65:major-ii-V-I progression-recognition:major-ii-V-I:5",
  "progression-recognition:224389223:67:minor-ii-V-i progression-recognition:minor-ii-V-i:7",
  "progression-recognition:1252467533:67:major-ii-V-I progression-recognition:major-ii-V-I:7",
  "progression-recognition:250199772:65:major-ii-V-I progression-recognition:major-ii-V-I:5",
  "progression-recognition:1572672275:65:minor-ii-V-i progression-recognition:minor-ii-V-i:5",
  "progression-recognition:2230745728:65:major-ii-V-I progression-recognition:major-ii-V-I:5",
  "progression-recognition:1100955143:65:minor-ii-V-i progression-recognition:minor-ii-V-i:5",
  "progression-recognition:4046152680:66:major-ii-V-I progression-recognition:major-ii-V-I:6",
  "progression-recognition:57008084:67:minor-ii-V-i progression-recognition:minor-ii-V-i:7",
  "progression-recognition:3104400155:65:minor-ii-V-i progression-recognition:minor-ii-V-i:5",
  "progression-recognition:406931602:67:minor-ii-V-i progression-recognition:minor-ii-V-i:7",
  "progression-recognition:3089037264:66:major-ii-V-I progression-recognition:major-ii-V-I:6",
  "progression-recognition:3827084074:65:minor-ii-V-i progression-recognition:minor-ii-V-i:5",
  "progression-recognition:3064412148:66:minor-ii-V-i progression-recognition:minor-ii-V-i:6",
  "progression-recognition:2657774992:67:minor-ii-V-i progression-recognition:minor-ii-V-i:7",
  "progression-recognition:892918190:67:major-ii-V-I progression-recognition:major-ii-V-I:7",
  "progression-recognition:3637854298:65:minor-ii-V-i progression-recognition:minor-ii-V-i:5",
  "progression-recognition:3483810387:67:major-ii-V-I progression-recognition:major-ii-V-I:7",
  "progression-recognition:621952388:65:minor-ii-V-i progression-recognition:minor-ii-V-i:5",
  "progression-recognition:417289699:66:major-ii-V-I progression-recognition:major-ii-V-I:6",
  "progression-recognition:1004915213:67:major-ii-V-I progression-recognition:major-ii-V-I:7",
  "progression-recognition:2497763982:67:minor-ii-V-i progression-recognition:minor-ii-V-i:7",
  "progression-recognition:2683813001:66:major-ii-V-I progression-recognition:major-ii-V-I:6",
  "progression-recognition:2743841621:67:major-ii-V-I progression-recognition:major-ii-V-I:7",
  "progression-recognition:2420011518:67:minor-ii-V-i progression-recognition:minor-ii-V-i:7",
  "progression-recognition:3008018372:66:minor-ii-V-i progression-recognition:minor-ii-V-i:6",
  "progression-recognition:4194675987:67:major-ii-V-I progression-recognition:major-ii-V-I:7",
  "progression-recognition:522634105:66:minor-ii-V-i progression-recognition:minor-ii-V-i:6",
  "progression-recognition:613992015:66:major-ii-V-I progression-recognition:major-ii-V-I:6",
  "digest 73d747cea2528",
]
`;

exports[`seeded questions are reproducible > rootless-voicing on 36–96 1`] = `
[
  "rootless-voicing:3049564378:48:min7:A rootless-voicing:min7:9:A",
  "rootless-voicing:1229806541:58:min7:B rootless-voicing:min7:0:B",
  "rootless-voicing:4088390650:61:min7:B rootless-voicing:min7:3:B",
  "rootless-voicing:437054851:53:min7:B rootless-voicing:min7:7:B",
  "rootless-voicing:1625275450:54:dom7:A rootless-voicing:dom7:2:A",
  "rootless-voicing:2809356655:61:dom7:A rootless-voicing:dom7:9:A",
  "rootless-voicing:1349385467:54:maj7:A rootless-voicing:maj7:2:A",
  "rootless-voicing:1322310304:57:dom7:B rootless-voicing:dom7:11:B",
  "rootless-voicing:2408301486:56:min7:B rootless-voicing:min7:10:B",
  "rootless-voicing:1578858717:53:min7:B rootless-voicing:min7:7:B",
  "rootless-voicing:4280561179:57:maj7:B rootless-voicing:maj7:10:B",
  "rootless-voicing:1902375489:48:min7:A rootless-voicing:min7:9:A",
  "rootless-voicing:2887960625:52:min7:A rootless-voicing:min7:1:A",
  "rootless-voicing:1771709723:57:maj7:B rootless-voicing:maj7:10:B",
  "rootless-voicing:1331219900:53:dom7:A rootless-voicing:dom7:1:A",
  "rootless-voicing:2357852598:57:dom7:B rootless-voicing:dom7:11:B",
  "rootless-voicing:3604519556:51:maj7:B rootless-voicing:maj7:4:B",
  "rootless-voicing:3328085047:60:dom7:A rootless-voicing:dom7:8:A",
  "rootless-voicing:802178832:55:min7:A rootless-voicing:min7:4:A",
  "rootless-voicing:1015807178:52:min7:B rootless-voicing:min7:6:B",
  "rootless-voicing:1478656000:61:dom7:A rootless-voicing:dom7:9:A",
  "rootless-voicing:1407510702:58:dom7:A rootless-voicing:dom7:6:A",
  "rootless-voicing:224389223:56:dom7:B rootless-voicing:dom7:10:B",
  "rootless-voicing:1252467533:62:dom7:A rootless-voicing:dom7:10:A",
  "rootless-voicing:250199772:52:dom7:A rootless-voicing:dom7:0:A",
  "rootless-voicing:1572672275:50:maj7:B rootless-voicing:maj7:3:B",
  "rootless-voicing:2230745728:52:dom7:A rootless-voicing:dom7:0:A",
  "rootless-voicing:1100955143:60:min7:B rootless-voicing:min7:2:B",
  "rootless-voicing:4046152680:51:dom7:B rootless-voicing:dom7:5:B",
  "rootless-voicing:57008084:51:min7:B rootless-voicing:min7:5:B",
  "rootless-voicing:3104400155:58:dom7:B rootless-voicing:dom7:0:B",
  "rootless-voicing:406931602:50:min7:A rootless-voicing:min7:11:A",
  "rootless-voicing:3089037264:54:maj7:B rootless-voicing:maj7:7:B",
  "rootless-voicing:3827084074:59:dom7:B rootless-voicing:dom7:1:B",
  "rootless-voicing:3064412148:51:maj7:A rootless-voicing:maj7:11:A",
  "rootless-voicing:2657774992:56:dom7:B rootless-voicing:dom7:10:B",
  "rootless-voicing:892918190:62:min7:A rootless-voicing:min7:11:A",
  "rootless-voicing:3637854298:48:dom7:B rootless-voicing:dom7:2:B",
  "rootless-voicing:3483810387:51:dom7:A rootless-voicing:dom7:11:A",
  "rootless-voicing:621952388:50:min7:B rootless-voicing:min7:4:B",
  "rootless-voicing:417289699:57:dom7:A rootless-voicing:dom7:5:A",
  "rootless-voicing:1004915213:51:dom7:A rootless-voicing:dom7:11:A",
  "rootless-voicing:2497763982:62:min7:A rootless-voicing:min7:11:A",
  "rootless-voicing:2683813001:54:maj7:B rootless-voicing:maj7:7:B",
  "rootless-voicing:2743841621:50:maj7:A rootless-voicing:maj7:10:A",
  "rootless-voicing:2420011518:59:min7:A rootless-voicing:min7:8:A",
  "rootless-voicing:3008018372:57:dom7:A rootless-voicing:dom7:5:A",
  "rootless-voicing:4194675987:62:maj7:A rootless-voicing:maj7:10:A",
  "rootless-voicing:522634105:62:dom7:B rootless-voicing:dom7:4:B",
  "rootless-voicing:613992015:49:min7:B rootless-voicing:min7:3:B",
  "digest 3ddb63c522fef",
]
`;

exports[`seeded questions are reproducible > rootless-voicing on 48–72 1`] = `
[
  "rootless-voicing:3049564378:48:min7:A rootless-voicing:min7:9:A",
  "rootless-voicing:1229806541:58:min7:B rootless-voicing:min7:0:B",
  "rootless-voicing:4088390650:61:min7:B rootless-voicing:min7:3:B",
  "rootless-voicing:437054851:53:min7:B rootless-voicing:min7:7:B",
  "rootless-voicing:1625275450:54:dom7:A rootless-voicing:dom7:2:A",
  "rootless-voicing:2809356655:61:dom7:A rootless-voicing:dom7:9:A",
  "rootless-voicing:1349385467:54:maj7:A rootless-voicing:maj7:2:A",
  "rootless-voicing:1322310304:57:dom7:B rootless-voicing:dom7:11:B",
  "rootless-voicing:2408301486:56:min7:B rootless-voicing:min7:10:B",
  "rootless-voicing:1578858717:53:min7:B rootless-voicing:min7:7:B",
  "rootless-voicing:4280561179:57:maj7:B rootless-voicing:maj7:10:B",
  "rootless-voicing:1902375489:48:min7:A rootless-voicing:min7:9:A",
  "rootless-voicing:2887960625:52:min7:A rootless-voicing:min7:1:A",
  "rootless-voicing:1771709723:57:maj7:B rootless-voicing:maj7:10:B",
  "rootless-voicing:1331219900:53:dom7:A rootless-voicing:dom7:1:A",
  "rootless-voicing:2357852598:57:dom7:B rootless-voicing:dom7:11:B",
  "rootless-voicing:3604519556:51:maj7:B rootless-voicing:maj7:4:B",
  "rootless-voicing:3328085047:60:dom7:A rootless-voicing:dom7:8:A",
  "rootless-voicing:802178832:55:min7:A rootless-voicing:min7:4:A",
  "rootless-voicing:1015807178:52:min7:B rootless-voicing:min7:6:B",
  "rootless-voicing:1478656000:61:dom7:A rootless-voicing:dom7:9:A",
  "rootless-voicing:1407510702:58:dom7:A rootless-voicing:dom7:6:A",
  "rootless-voicing:224389223:56:dom7:B rootless-voicing:dom7:10:B",
  "rootless-voicing:1252467533:62:dom7:A rootless-voicing:dom7:10:A",
  "rootless-voicing:250199772:52:dom7:A rootless-voicing:dom7:0:A",
  "rootless-voicing:1572672275:50:maj7:B rootless-voicing:maj7:3:B",
  "rootless-voicing:2230745728:52:dom7:A rootless-voicing:dom7:0:A",
  "rootless-voicing:1100955143:60:min7:B rootless-voicing:min7:2:B",
  "rootless-voicing:4046152680:51:dom7:B rootless-voicing:dom7:5:B",
  "rootless-voicing:57008084:51:min7:B rootless-voicing:min7:5:B",
  "rootless-voicing:3104400155:58:dom7:B rootless-voicing:dom7:0:B",
  "rootless-voicing:406931602:50:min7:A rootless-voicing:min7:11:A",
  "rootless-voicing:3089037264:54:maj7:B rootless-voicing:maj7:7:B",
  "rootless-voicing:3827084074:59:dom7:B rootless-voicing:dom7:1:B",
  "rootless-voicing:3064412148:51:maj7:A rootless-voicing:maj7:11:A",
  "rootless-voicing:2657774992:56:dom7:B rootless-voicing:dom7:10:B",
  "rootless-voicing:892918190:50:min7:A rootless-voicing:min7:11:A",
  "rootless-voicing:3637854298:48:dom7:B rootless-voicing:dom7:2:B",
  "rootless-voicing:3483810387:51:dom7:A rootless-voicing:dom7:11:A",
  "rootless-voicing:621952388:50:min7:B rootless-voicing:min7:4:B",
  "rootless-voicing:417289699:57:dom7:A rootless-voicing:dom7:5:A",
  "rootless-voicing:1004915213:51:dom7:A rootless-voicing:dom7:11:A",
  "rootless-voicing:2497763982:50:min7:A rootless-voicing:min7:11:A",
  "rootless-voicing:2683813001:54:maj7:B rootless-voicing:maj7:7:B",
  "rootless-voicing:2743841621:50:maj7:A rootless-voicing:maj7:10:A",
  "rootless-voicing:2420011518:59:min7:A rootless-voicing:min7:8:A",
  "rootless-voicing:3008018372:57:dom7:A rootless-voicing:dom7:5:A",
  "rootless-voicing:4194675987:62:maj7:A rootless-voicing:maj7:10:A",
  "rootless-voicing:522634105:62:dom7:B rootless-voicing:dom7:4:B",
  "rootless-voicing:613992015:49:min7:B rootless-voicing:min7:3:B",
  "digest f3b775ec7d28c",
]
`;

exports[`seeded questions are reproducible > rootless-voicing on 60–72 1`] = `
[
  "rootless-voicing:3049564378:60:min7:A rootless-voicing:min7:9:A",
  "rootless-voicing:1229806541:60:min7:B rootless-voicing:min7:2:B",
  "rootless-voicing:4088390650:61:min7:B rootless-voicing:min7:3:B",
  "rootless-voicing:437054851:63:min7:B rootless-voicing:min7:5:B",
  "rootless-voicing:1625275450:62:maj7:A rootless-voicing:maj7:10:A",
  "rootless-voicing:2809356655:61:dom7:A rootless-voicing:dom7:9:A",
  "rootless-voicing:1349385467:61:maj7:B rootless-voicing:maj7:2:B",
  "rootless-voicing:1322310304:62:dom7:A rootless-voicing:dom7:10:A",
  "rootless-voicing:2408301486:61:min7:A rootless-voicing:min7:10:A",
  "rootless-voicing:1578858717:60:maj7:B rootless-voicing:maj7:1:B",
  "rootless-voicing:4280561179:61:maj7:A rootless-voicing:maj7:9:A",
  "rootless-voicing:1902375489:60:min7:A rootless-voicing:min7:9:A",
  "rootless-voicing:2887960625:60:min7:B rootless-voicing:min7:2:B",
  "rootless-voicing:1771709723:61:maj7:A rootless-voicing:maj7:9:A",
  "rootless-voicing:1331219900:62:dom7:A rootless-voicing:dom7:10:A",
  "rootless-voicing:2357852598:61:min7:B rootless-voicing:min7:3:B",
  "rootless-voicing:3604519556:62:maj7:B rootless-voicing:maj7:3:B",
  "rootless-voicing:3328085047:61:dom7:A rootless-voicing:dom7:9:A",
  "rootless-voicing:802178832:62:min7:B rootless-voicing:min7:4:B",
  "rootless-voicing:1015807178:62:maj7:A rootless-voicing:maj7:10:A",
  "rootless-voicing:1478656000:63:min7:B rootless-voicing:min7:5:B",
  "rootless-voicing:1407510702:63:dom7:B rootless-voicing:dom7:5:B",
  "rootless-voicing:224389223:62:dom7:A rootless-voicing:dom7:10:A",
  "rootless-voicing:1252467533:62:maj7:A rootless-voicing:maj7:10:A",
  "rootless-voicing:250199772:60:maj7:B rootless-voicing:maj7:1:B",
  "rootless-voicing:1572672275:62:maj7:B rootless-voicing:maj7:3:B",
  "rootless-voicing:2230745728:60:dom7:B rootless-voicing:dom7:2:B",
  "rootless-voicing:1100955143:61:min7:B rootless-voicing:min7:3:B",
  "rootless-voicing:4046152680:63:dom7:B rootless-voicing:dom7:5:B",
  "rootless-voicing:57008084:62:dom7:A rootless-voicing:dom7:10:A",
  "rootless-voicing:3104400155:60:dom7:B rootless-voicing:dom7:2:B",
  "rootless-voicing:406931602:61:min7:A rootless-voicing:min7:10:A",
  "rootless-voicing:3089037264:64:maj7:B rootless-voicing:maj7:5:B",
  "rootless-voicing:3827084074:61:dom7:B rootless-voicing:dom7:3:B",
  "rootless-voicing:3064412148:62:maj7:A rootless-voicing:maj7:10:A",
  "rootless-voicing:2657774992:62:dom7:A rootless-voicing:dom7:10:A",
  "rootless-voicing:892918190:61:min7:A rootless-voicing:min7:10:A",
  "rootless-voicing:3637854298:61:dom7:B rootless-voicing:dom7:3:B",
  "rootless-voicing:3483810387:62:dom7:A rootless-voicing:dom7:10:A",
  "rootless-voicing:621952388:60:maj7:B rootless-voicing:maj7:1:B",
  "rootless-voicing:417289699:63:dom7:B rootless-voicing:dom7:5:B",
  "rootless-voicing:1004915213:62:dom7:A rootless-voicing:dom7:10:A",
  "rootless-voicing:2497763982:61:min7:A rootless-voicing:min7:10:A",
  "rootless-voicing:2683813001:60:maj7:A rootless-voicing:maj7:8:A",
  "rootless-voicing:2743841621:62:dom7:A rootless-voicing:dom7:10:A",
  "rootless-voicing:2420011518:60:min7:A rootless-voicing:min7:9:A",
  "rootless-voicing:3008018372:63:dom7:B rootless-voicing:dom7:5:B",
  "rootless-voicing:4194675987:61:maj7:A rootless-voicing:maj7:9:A",
  "rootless-voicing:522634105:62:dom7:B rootless-voicing:dom7:4:B",
  "rootless-voicing:613992015:62:maj7:A rootless-voicing:maj7:10:A",
  "digest ec507961927ef",
]
`;

exports[`seeded questions are reproducible > rootless-voicing on 60–79 1`] = `
[
  "rootless-voicing:3049564378:60:min7:A rootless-voicing:min7:9:A",
  "rootless-voicing:1229806541:70:min7:B rootless-voicing:min7:0:B",
  "rootless-voicing:4088390650:61:min7:B rootless-voicing:min7:3:B",
  "rootless-voicing:437054851:65:min7:B rootless-voicing:min7:7:B",
  "rootless-voicing:1625275450:61:dom7:B rootless-voicing:dom7:3:B",
  "rootless-voicing:2809356655:61:dom7:A rootless-voicing:dom7:9:A",
  "rootless-voicing:1349385467:66:maj7:A rootless-voicing:maj7:2:A",
  "rootless-voicing:1322310304:69:dom7:B rootless-voicing:dom7:11:B",
  "rootless-voicing:2408301486:68:min7:B rootless-voicing:min7:10:B",
  "rootless-voicing:1578858717:64:maj7:A rootless-voicing:maj7:0:A",
  "rootless-voicing:4280561179:69:maj7:B rootless-voicing:maj7:10:B",
  "rootless-voicing:1902375489:60:min7:A rootless-voicing:min7:9:A",
  "rootless-voicing:2887960625:64:min7:A rootless-voicing:min7:1:A",
  "rootless-voicing:1771709723:69:maj7:B rootless-voicing:maj7:10:B",
  "rootless-voicing:1331219900:60:dom7:A rootless-voicing:dom7:8:A",
  "rootless-voicing:2357852598:69:dom7:B rootless-voicing:dom7:11:B",
  "rootless-voicing:3604519556:63:maj7:B rootless-voicing:maj7:4:B",
  "rootless-voicing:3328085047:60:dom7:A rootless-voicing:dom7:8:A",
  "rootless-voicing:802178832:67:min7:A rootless-voicing:min7:4:A",
  "rootless-voicing:1015807178:62:maj7:B rootless-voicing:maj7:3:B",
  "rootless-voicing:1478656000:64:min7:B rootless-voicing:min7:6:B",
  "rootless-voicing:1407510702:64:dom7:B rootless-voicing:dom7:6:B",
  "rootless-voicing:224389223:68:dom7:B rootless-voicing:dom7:10:B",
  "rootless-voicing:1252467533:62:dom7:A rootless-voicing:dom7:10:A",
  "rootless-voicing:250199772:69:dom7:B rootless-voicing:dom7:11:B",
  "rootless-voicing:1572672275:62:maj7:B rootless-voicing:maj7:3:B",
  "rootless-voicing:2230745728:64:dom7:A rootless-voicing:dom7:0:A",
  "rootless-voicing:1100955143:60:min7:B rootless-voicing:min7:2:B",
  "rootless-voicing:4046152680:63:dom7:B rootless-voicing:dom7:5:B",
  "rootless-voicing:57008084:60:maj7:A rootless-voicing:maj7:8:A",
  "rootless-voicing:3104400155:70:dom7:B rootless-voicing:dom7:0:B",
  "rootless-voicing:406931602:62:min7:A rootless-voicing:min7:11:A",
  "rootless-voicing:3089037264:66:maj7:B rootless-voicing:maj7:7:B",
  "rootless-voicing:3827084074:65:dom7:A rootless-voicing:dom7:1:A",
  "rootless-voicing:3064412148:61:min7:B rootless-voicing:min7:3:B",
  "rootless-voicing:2657774992:68:dom7:B rootless-voicing:dom7:10:B",
  "rootless-voicing:892918190:62:min7:A rootless-voicing:min7:11:A",
  "rootless-voicing:3637854298:60:dom7:B rootless-voicing:dom7:2:B",
  "rootless-voicing:3483810387:63:dom7:A rootless-voicing:dom7:11:A",
  "rootless-voicing:621952388:70:maj7:B rootless-voicing:maj7:11:B",
  "rootless-voicing:417289699:69:dom7:A rootless-voicing:dom7:5:A",
  "rootless-voicing:1004915213:63:dom7:A rootless-voicing:dom7:11:A",
  "rootless-voicing:2497763982:62:min7:A rootless-voicing:min7:11:A",
  "rootless-voicing:2683813001:66:maj7:B rootless-voicing:maj7:7:B",
  "rootless-voicing:2743841621:66:min7:B rootless-voicing:min7:8:B",
  "rootless-voicing:2420011518:71:maj7:B rootless-voicing:maj7:0:B",
  "rootless-voicing:3008018372:69:dom7:A rootless-voicing:dom7:5:A",
  "rootless-voicing:4194675987:62:maj7:A rootless-voicing:maj7:10:A",
  "rootless-voicing:522634105:62:dom7:B rootless-voicing:dom7:4:B",
  "rootless-voicing:613992015:61:dom7:B rootless-voicing:dom7:3:B",
  "digest 62e9fe60df829",
]
`;
